--- a/Docs/PaaS/SDK文档/小程序/互动课堂接入文档.md
+++ b/Docs/PaaS/SDK文档/小程序/互动课堂接入文档.md
@@ -116,7 +116,7 @@ callback | Function | 是 | 回调
 | 参数 | 类型 |  说明 |
 | ---------| ---- | --------- |
 | module | Integer | 0： IM模块   1: TRTC模块 2： 白板模块 |
-| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./README_TEduBoard.md) |
+| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./互动白板接入文档.md) |
 | desc | String | 错误描述 |
 
 
@@ -140,7 +140,7 @@ callback | Function | 是 | 回调
 | 参数 | 类型  | 说明 |
 | ---------| ---- | --------- |
 | module | Integer | 0： IM模块   1: TRTC模块 2： 白板模块
-| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./README_TEduBoard.md) |
+| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./互动白板接入文档.md) |
 | desc | String | 错误描述
 
 ### 4. 登出
@@ -158,7 +158,7 @@ callback | Function | 是 | 回调
 | 参数 | 类型 |  说明 |
 | ---------| ---- | --------- |
 | module | Integer | 0： IM模块   1: TRTC模块 2： 白板模块
-| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./README_TEduBoard.md) |
+| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./互动白板接入文档.md) |
 | desc | String | 错误描述
 
 ### 5. 创建课堂
@@ -177,7 +177,7 @@ callback | Function | 是 | 回调
 | 参数 | 类型 |  说明 |
 | ---------| ---- | --------- |
 | module | Integer | 0： IM模块   1: TRTC模块 2： 白板模块
-| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./README_TEduBoard.md) |
+| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./互动白板接入文档.md) |
 | desc | String | 错误描述
 
 
@@ -198,7 +198,7 @@ callback | Function | 是 | 回调
 | 参数 | 类型 |  说明 |
 | ---------| ---- | --------- |
 | module | Integer | 0： IM模块   1: TRTC模块 2： 白板模块
-| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./README_TEduBoard.md) |
+| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./互动白板接入文档.md) |
 | desc | String | 错误描述
 
 ### 7. 加入课堂
@@ -231,7 +231,7 @@ callback | Function | 是 | 回调
 | 参数 | 类型 |  说明 |
 | ---------| ---- | --------- |
 | module | Integer | 0： IM模块   1: TRTC模块 2： 白板模块
-| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./README_TEduBoard.md) |
+| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./互动白板接入文档.md) |
 | desc | String | 错误描述
 
 
@@ -252,7 +252,7 @@ callback | Function | 是 | 回调
 | 参数 | 类型 |  说明 |
 | ---------| ---- | --------- |
 | module | Integer | 0： IM模块   1: TRTC模块 2： 白板模块
-| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./README_TEduBoard.md) |
+| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./互动白板接入文档.md) |
 | desc | String | 错误描述
 
 
@@ -318,7 +318,7 @@ callback | Function | 是 | 回调
 | 参数 | 类型 |  说明 |
 | ---------| ---- | --------- |
 | module | Integer | 0： IM模块   1: TRTC模块 2： 白板模块 |
-| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./README_TEduBoard.md) |
+| code | Integer | 错误码， 0： 正确<br/>[IM模块错误码文档](https://cloud.tencent.com/document/product/269/1671) <br/>[TRTC模块错误码文档](https://cloud.tencent.com/document/product/647/34342)<br/>[白板模块错误码](./互动白板接入文档.md) |
 | desc | String | 错误描述 |
 
 
@@ -579,8 +579,8 @@ var teduBoard = tic.getBoardInstance()
 | 10004 | 缺少必要参数userSig |
 | 10005 | 缺少必要参数roomId |
 | 70346 | 缺少必要参数userSig |
-| 80 | 进房秘钥privateMapKey不能为空 |
+| 80 | 进房密钥privateMapKey不能为空 |
 | 82 | 参数检测失败 |
-| 86 | 进房秘钥privateMapKey已过期 |
-| 87 | 进房秘钥privateMapKey不正确 |
+| 86 | 进房密钥privateMapKey已过期 |
+| 87 | 进房密钥privateMapKey不正确 |
 | 88 | 还没有购买实时音视频套餐包 |
