--- a/Docs/PaaS/SDK文档/macOS/互动课堂接入文档.md
+++ b/Docs/PaaS/SDK文档/macOS/互动课堂接入文档.md
@@ -203,7 +203,7 @@ boardView.frame = CGRectMake(0, 0, 320, 180);
 [self.view addSubview:boardView];
 ```
 
-更多`TEduBoard_Mac.framework`接口，请移步到[白板2.0接入文档](README_TEduBoard.md)
+更多`TEduBoard_Mac.framework`接口，请移步到[互动白板接入文档](./互动白板接入文档.md)
 
 ### 2.4 IM收发消息
 TIC封装了`ImSDKForMac.framework`发消息的常用接口，每个发消息接口在`TICMessageListener`监听中都能找到对应的接收消息回调，具体对应关系如下：
