--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -90,9 +90,10 @@
 
 #### PaaS体验
 
-| Web | 小程序 | Windows | Android | iOS | macOS |
-| :-: | :-: | :-: | :-: | :-: | :-: |
-| [体验链接](https://tic-demo-1257240443.cos.ap-shanghai.myqcloud.com/index.html)<br>[源码地址](./Web)| ![](https://main.qcloudimg.com/raw/db3055ade262e17bcd8711026f487ae7.png)<br>[源码地址](./小程序) | [源码地址](./Windows) | [源码地址](./Android) | [源码地址](./iOS) | [源码地址](./macOS) |
+|| Web | 小程序 | Windows | Android | iOS | macOS |
+| :-: | :-: | :-: | :-: | :-: | :-: | :-: |
+|源码下载|[点击前往](./Web)| [点击前往](./小程序) | [点击前往](./Windows) | [点击前往](./Android) | [点击前往](./iOS) | [点击前往](./macOS) |
+|快速体验|[体验链接](https://tic-demo-1257240443.cos.ap-shanghai.myqcloud.com/index.html)|![](https://main.qcloudimg.com/raw/db3055ade262e17bcd8711026f487ae7.png)|-|-|-|-|
 
 
 ## 功能简介
