--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -1,23 +1,20 @@
-# 方案简介
-
 ## 产品概述
 
-腾讯云在线教育互动课堂（Tencent Interact Class，TIC）是集实时音视频、交互式白板涂鸦、IM聊天室、PPT课件共享、屏幕分享、录制回放等功能于一体的一站式在线教育互动课堂解决方案。
-
+腾讯云在线教育互动课堂（Tencent Interact Class，TIC）是集实时音视频、交互式白板涂鸦、IM 聊天室、PPT 课件共享、屏幕分享和录制回放等功能于一体的一站式在线教育互动课堂解决方案。
 
 ## 产品体验
 
 腾讯云在线教育互动课堂提供了`PaaS`和`SaaS`方案，您可以根据需求选择合适的方案。
 
-* `PaaS`方案提供互动白板、实时音视频、群组聊天基础能力，您可以自定义白板、视频、聊天等交互界面，是更灵活的在线教育解决方案。
-* `SaaS`方案仅需在客户端按协议调起互动课堂的组件，即可一站式的使用互动课堂提供的全部功能。包括互动白板能力、实时音视频能力、群组聊天能力、标准界面交互能力、云API课堂管理能力以及本地录制、播片等常见在线教育的基础能力。
+* `PaaS`方案提供了互动白板、实时音视频和群组聊天基础能力，您可以自定义白板、视频和聊天等交互界面，是一个更为灵活的在线教育解决方案。
+* `SaaS`方案仅需在客户端按协议调起互动课堂的组件，即可一站式的使用互动课堂提供的全部功能。包括互动白板能力、实时音视频能力、群组聊天能力、标准界面交互能力和云 API 课堂管理能力以及本地录制、播片等常见在线教育的基础能力。
 
-
-
-
-<table>
+<table  class="tg">
 <tr>
-<td>功能模块</td><td>功能项</td><td>PaaS</td><td>SaaS</td>
+<td class="tg-s268">功能模块</td>
+<td class="tg-s268">功能项</td>
+<td class="tg-s268">PaaS</td>
+<td class="tg-s268">SaaS</td>
 </tr>
 <tr>
 <td rowspan=3>互动白板</td>
@@ -54,78 +51,84 @@
 </tr>
 <tr>
 <td rowspan=2>课堂界面</td>
-<td>大班课课堂界面</td><td></td><td>支持</td>
+<td>大班课课堂界面</td><td>-</td><td>支持</td>
 </tr>
 <tr>
-<td>小班课课堂界面</td><td></td><td>支持</td>
+<td>小班课课堂界面</td><td>-</td><td>支持</td>
 </tr>
 <tr>
 <td rowspan=5>业务模块</td>
-<td>课堂管理</td><td></td><td>支持</td>
+<td>课堂管理</td><td>-</td><td>支持</td>
 </tr>
 <tr>
-<td>课件管理</td><td></td><td>支持</td>
+<td>课件管理</td><td>-</td><td>支持</td>
 </tr>
 <tr>
-<td>自定义课件</td><td></td><td>支持</td>
+<td>自定义课件</td><td>-</td><td>支持</td>
 </tr>
 <tr>
-<td>课堂数据统计</td><td></td><td>支持</td>
+<td>课堂数据统计</td><td>-</td><td>支持</td>
 </tr>
 <tr>
-<td>课堂行为回调</td><td></td><td>支持</td>
+<td>课堂行为回调</td><td>-</td><td>支持</td>
 </tr>
 </table>
 
-
-
 #### SaaS体验
-
 ![](https://main.qcloudimg.com/raw/ea3692fd322dbcc7d86c3fc3cc6d3c59.jpg)
 
+| 平台 | 快速体验 |
+|---------|---------|
+| Web | 即将推出 |
+| 小程序 | 即将推出 |
+| Windows |  [申请体验](./购买指南.md) |
+| Android | 即将推出 |
+| iOS | 即将推出 |
+| macOS | [申请体验](./购买指南.md)  |
 
-| Web | 小程序 | Windows | Android | iOS | macOS |
-| :-: | :-: | :-: | :-: | :-: | :-: |
-| 即将推出 | 即将推出 | [申请体验](./购买指南.md) | 即将推出 | 即将推出 | [申请体验](./购买指南.md) |
 
 #### PaaS体验
 
-|| Web | 小程序 | Windows | Android | iOS | macOS |
-| :-: | :-: | :-: | :-: | :-: | :-: | :-: |
-|源码下载|[点击前往](./Web)| [点击前往](./小程序) | [点击前往](./Windows) | [点击前往](./Android) | [点击前往](./iOS) | [点击前往](./macOS) |
-|快速体验|[体验链接](https://tic-demo-1257240443.cos.ap-shanghai.myqcloud.com/index.html)|![](https://main.qcloudimg.com/raw/db3055ade262e17bcd8711026f487ae7.png)|-|-|-|-|
+| 平台 | 源码下载 | 快速体验 |
+|---------|---------|---------|
+| Web | [点击前往](https://github.com/tencentyun/TIC/tree/master) | [体验链接](https://tic-demo-1257240443.cos.ap-shanghai.myqcloud.com/index.html) |
+|小程序  | [点击前往](https://github.com/tencentyun/TIC/tree/master)   | ![](https://main.qcloudimg.com/raw/db3055ade262e17bcd8711026f487ae7.png) |
+| Windows |[点击前往](https://github.com/tencentyun/TIC/tree/master)  | - |
+|Android  | [点击前往](https://github.com/tencentyun/TIC/tree/master)  | - |
+| iOS | [点击前往](https://github.com/tencentyun/TIC/tree/master) | - |
+| macOS |[点击前往](https://github.com/tencentyun/TIC/tree/master)   | - |
 
 
 ## 功能简介
 
-腾讯云在线教育互动课堂解决方案 提供全平台互通的高可靠互动白板服务、高品质实时音视频服务以及高并发即时通信服务，可快速从零开始搭建出在线教育平台。
+腾讯云在线教育互动课堂解决方案 提供全平台互通的高可靠互动白板服务、高品质实时音视频服务以及高并发即时通讯服务，可快速从零开始搭建出在线教育平台。
 
 #### 互动白板
 
-* 支持基本涂鸦，如铅笔、鼠标、激光笔、橡皮擦。
-* 支持标准图形，如直线、空心椭圆，实心椭圆、空心矩形、实心矩形。
-* 支持背景设置，如背景颜色、背景图片、背景H5。
-* 支持多行文本输入，可设置文本颜色、字体、大小。
-* 支持框选、移动缩放、多种手势、撤销重做。
-* 支持动画PPT、PDF、WORD。
+* 支持基本涂鸦，如铅笔、鼠标、激光笔和橡皮擦。
+* 支持标准图形，如直线、空心椭圆，实心椭圆、空心矩形和实心矩形。
+* 支持背景设置，如背景颜色、背景图片和背景 H5。
+* 支持多行文本输入，可设置文本颜色、字体和大小。
+* 支持框选、移动缩放、多种手势和撤销重做。
+* 支持动画 PPT、PDF 和 WORD。
 * 支持白板课中实时录制和课后离线补录。
-* 支持白板预加载、笔迹平滑优化。
-* 支持白板自定义比例设置、多种内容适配模式。
+* 支持白板预加载和笔迹平滑优化。
+* 支持白板自定义比例设置和多种内容适配模式。
 
 #### 音视频
 
 * 集成了腾讯云的实时音视频能力。
 * 支持老师和学生进行实时音视频互动。
-* 支持自定义视频采集、屏幕共享、播放旁路视频等功能。
+* 支持自定义视频采集、屏幕共享和播放旁路视频等功能。
 
 #### 云通信
 
 * 集成了腾讯云云通信能力。
 * 支持课堂中实时消息聊天功能。
-* 支持多种消息类型，包括：文本、自定义、图片、语音、小视频等。
+* 支持多种消息类型，包括：文本、自定义、图片、语音和小视频等。
 
 ## 使用限制
 
 * 默认支持房间内最高人数为1000人。
-* 单房间内人数超过1000人，请您提前通过邮件`ticsupport@qq.com`或者商务跟我们联系。
+* 单房间内人数超过1000人时，请您提前通过邮件 ticsupport@qq.com 或者商务跟我们联系。
 
