--- a/Docs/SaaS/桌面端接入.md
+++ b/Docs/SaaS/桌面端接入.md
@@ -6,7 +6,7 @@
 - 命令行启动
 
 ```
-tclass sdkappid class_id user_id user_token user_sig config_url
+tclass sdkappid class_id user_id user_token user_sig
 ```
 
 - URL启动
