文档链接改为相对链接

--- a/Docs/PaaS/SDK文档/Android/互动白板接入文档.md
+++ b/Docs/PaaS/SDK文档/Android/互动白板接入文档.md
@@ -150,7 +150,7 @@ mBoard.setToolType(TEDU_BOARD_TOOL_TYPE_SELECT);
 | 设置当前白板页缩放比例 | getBoardScale | setBoardScale|
 | 设置白板内容自适应模式 | getBoardContentFitMode | setBoardContentFitMode|
 
-每个接口的详细使用说明参见 [互动白板接口文档](https://cloud.tencent.com/document/product/680/17884)。
+每个接口的详细使用说明参见 [互动白板接口文档](../互动白板接口文档.md)。
 
 #### 清除涂鸦
 您可以调用以下接口清除当前白板页涂鸦，通过参数可以指定是否同时清除背景图片：
