--- a/Docs/PaaS/SDK文档/macOS/互动白板接入文档.md
+++ b/Docs/PaaS/SDK文档/macOS/互动白板接入文档.md
@@ -97,7 +97,7 @@ if([_boardController getToolType] != TEDU_BOARD_TOOL_TYPE_RECT_SELECT){
 | 白板当前使用的背景图片 | 无 | setBackgroundImage |
 | 白板当前使用的背景 H5 | 无 | setBackgroundH5 |
 
-每个接口的详细使用说明参见 [互动白板接口文档](https://cloud.tencent.com/document/product/680/17884)。
+每个接口的详细使用说明参见 [互动白板接口文档](../互动白板接口文档.md)。
 
 #### 清除涂鸦
 您可以调用以下接口清除当前白板页涂鸦，通过参数可以指定是否同时清除背景图片：
