--- a/Docs/PaaS/SDK文档/Windows/互动课堂接入文档.md
+++ b/Docs/PaaS/SDK文档/Windows/互动课堂接入文档.md
@@ -213,7 +213,7 @@ TEduBoardController *boardController = TICManager::GetInstance().GetBoardControl
 // 其它白板操作
 ```
 
-更多 `TEduBoard` 接口，请参考 [互动白板接入文档](https://cloud.tencent.com/document/product/680/36113)。
+更多 `TEduBoard` 接口，请参考 [互动白板接入文档](./互动白板接入文档.md)。
 
 
 ### IM 收发消息
