--- a/Docs/PaaS/文档转码.md
+++ b/Docs/PaaS/文档转码.md
@@ -464,5 +464,4 @@ ppt 保存时，将字体库一起打包进 ppt。
 解决方法：去掉不支持的特效或者使用其他特效替换。
 3. 为什么有些 ppt 或 pptx 文件，本地 PowerPoint 预览正常；但是转码时，服务器返回错误“ppt may contain unsupported elements”？  
 问题原因：ppt 的内容中含有一些不支持转码 h5 的元素，所以导致转码失败。
-解决方法：
-如果是 pptx 格式文件，可以用 powerpoint 另存为 ppt 格式，然后重新尝试转码。
+解决方法：如果是 pptx 格式文件，可以用 powerpoint 另存为 ppt 格式，然后重新尝试转码。
