--- a/Docs/SaaS/快速接入.md
+++ b/Docs/SaaS/快速接入.md
@@ -1,18 +1,35 @@
 ## 快速接入
 
 互动课堂SaaS组件为客户提供了一站式的在线教育服务。客户可以"零开发"实现音视频互动，聊天，白板，课件，成员管理等课堂体验。同时互动课堂SaaS组件也提供了丰富的自定义能力，助力客户打造自己想要的特色课堂。
-![接入交互图](https://main.qcloudimg.com/raw/260cbf920816e6daa78015a7b18a000d.jpg)
 
-### 1. 注册账号
+### SaaS方式接入
+
+![接入交互图](https://main.qcloudimg.com/raw/da9f60ea73635b539141f64fa54b0dbc.jpg)
+
+1. 管理员在控制台添加老师和学生
+2. 将老师或学生的userid和usertoken告知对应的老师或学生
+3. 管理员在控制台约课
+4. 管理员将课堂url或课堂id告知老师和学生
+5. 老师和学生有两种方式可以进入课堂。方式一，点击课堂url进房，此时老师和学生需要在登录界面输入userid和usertoken进入课堂。方式二，直接启动SaaS应用，此时老师和学生需要输入机构码，课堂id，userid，usertoken进入课堂
+6. 老师进入房间后自行备课
+7. 老师点击上课按钮开始上课
+8. 老师和学生在课堂内正常上课
+9. 老师点击下课按钮结束上课
+10. 控制台在课堂结束后会生成课堂统计信息和课堂录制文件
+
+
+
+
+### 组件方式接入
+
+![接入交互图](https://main.qcloudimg.com/raw/f4a1bfdf6978dd9e75f5ed2080d4b326.jpg)
+
+1. 注册账号
 调用[后台API](./%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/%E4%BA%91API.md#21-%E5%88%9B%E5%BB%BA%E8%B4%A6%E5%8F%B7)在腾讯云创建老师和学生的账号。
 
-### 2. 创建课堂
+2. 创建课堂
 调用[后台API](./%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/%E4%BA%91API.md#11-%E9%A2%84%E7%BA%A6%E8%AF%BE%E5%A0%82)在腾讯云创建课堂。
 
-### 3. 终端接入
-
-#### Electron (window / Mac)
-[接入文档](./桌面端接入.md)
-
-#### Web
-[接入文档](./Web端接入.md)
+3. 终端接入
+[Electron (window / Mac)](./桌面端接入.md)
+[Web](./Web端接入.md)
