1,添加 “支持转码格式” 说明

--- a/Docs/PaaS/文档转码.md
+++ b/Docs/PaaS/文档转码.md
@@ -346,6 +346,9 @@ Body 参数（JSON 格式）
 {"error_code": 0}
 ```
 
+## 支持转码格式
+目前只支持：doc(x)、ppt(x) 和 pdf 文档；暂时不支持 excel 和 txt 文档转码
+
 ## 后台错误码
 
 #### 文档转码过程错误码
