--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -25,9 +25,9 @@
 
 ### 1. 登录
 
-填写sdkappid，账号和密码，用户以管理员身份登录控制台。
+填写机构码，账号和密码，用户以管理员身份登录控制台。
 
-![](https://main.qcloudimg.com/raw/9bbafcabebdf149e4d09f747fc4bd153.png)
+![](https://main.qcloudimg.com/raw/5d6f0d87a975ebb5024fec1499e46b57.png)
 
 ### 2. 机构设置
 
@@ -37,11 +37,12 @@
 
 管理员登录成功后，点击【机构设置】>【基本信息】页面，按照指引获取私钥进行填写，并点击保存。
 
-![](https://main.qcloudimg.com/raw/1edbb9a59e35acf5851b2016ebbac96d.png)
+![](https://main.qcloudimg.com/raw/9df672e4acd6067f5fa79c9f751ccd21.png)
 
 #### 2.2 修改机构基本信息
 
-在【机构设置】>【基本信息】页面，管理员可自行修改机构联系人，联系电话和邮箱；机构码，机构名称，sdkappid和账号周期由控制台后台填充，不可修改。
+在【机构设置】>【基本信息】页面，管理员可自行修改机构logo的图片地址，联系人，联系电话，邮箱和回调url；机构码，机构名称，sdkappid和账号周期由控制台后台填充，不可修改。
+> 控制台配置回调url，回调的信息会通过这个地址请求反馈给用户。这个回调地址可以根据用户的业务场景填写 ，如果不需要接收回调信息可以不填。
 
 ### 3. 用户管理
 
@@ -63,8 +64,11 @@
 
 管理员在【用户管理】页面，可查看目前所有用户列表信息；通过右上方搜索栏，搜索用户id可查看对应用户信息。
 
-![](https://main.qcloudimg.com/raw/305a175c91477a148afaac31b9a8fffe.png)
+![](https://main.qcloudimg.com/raw/64d83dc31b68bd9eae33f2d9c0d09150.png)
 
+#### 3.3 编辑用户信息
+管理员管理员在【用户管理】页面，可以重新编辑单个用户的信息，操作与添加用户相同。用户id不可被修改。
+![](https://main.qcloudimg.com/raw/93a5fd74913a73e03879573fb0db60b3.png)
 ### 4. 课堂管理
 
 #### 4.1 创建课堂
@@ -88,17 +92,20 @@
 
 ![](https://main.qcloudimg.com/raw/c4fe3179764468a3a280b5c39a04c267.png)
 
-（3）点击【教师】，在弹框列表中搜索或点击选择本节课程教师，教师id将自动填写在课堂表单中。
+（3）点击【教师】，在弹框列表中搜索或点击选择本节课程教师，教师id将自动填写在课堂表单中。只能选择一个教师。
 
 > 也可在弹框列表中，点击”添加老师“，创建老师后再进行选择。创建流程与添加用户相同。
 
 ![](https://main.qcloudimg.com/raw/a28f4461d298d725434f2167635c9927.png)
 
-(4）完善课堂信息后点击【创建】创建课堂。创建成功将弹出”保存成功“提示，并自动跳转至【课堂管理】页面，可查看课堂信息。
+(4) 点击【学生】，在弹框列表中搜索或点击选择允许进入课堂的学生，学生id将自动填写在课堂表单中。可选择多个学生。
+> 也可在弹框列表中，点击”添加学生“，创建学生后再进行选择。创建流程与添加用户相同。
+
+(5）完善课堂信息后点击【创建】创建课堂。创建成功将弹出”保存成功“提示，并自动跳转至【课堂管理】页面，可查看课堂信息。
 
 #### 4.2 查看课堂信息
 
-管理员在【教学管理】>【课堂管理】页面，可查看目前所有课堂信息，包括课程ID，课程名称，课程状态（未开始/进行中/已结束），以及开始结束时间等；通过右上方搜索栏，搜索课堂id可查看对应课堂信息。
+管理员在【教学管理】>【课堂管理】页面，可查看目前所有课堂信息，包括课程ID，课程名称，课程状态（未开课/上课中/已结束），以及预约的开始结束时间等；通过右上方搜索栏，搜索课堂id可查看对应课堂信息。
 
 >课程id由控制台后台自动生成。
 
@@ -118,13 +125,13 @@
 
 - **删除：**点击该节课堂信息中的【删除】，删除课堂
 
-- **查看详情：**点击该节课堂信息中的【查看详情】，即可获取课堂链接，课堂链接主要包含sdkappid和该课程id。
+- **查看详情：**点击该节课堂信息中的【查看详情】，即可获取课堂链接，课堂链接主要包含机构码和该课程id。
 
   > 管理员可以将链接分享给老师或学生，老师或学生在互动课堂客户端/移动端/web端输入链接，可直接进入链接所属课堂。
   >
   > 已结束的课堂不可点击【查看详情】。
 
-  ![](https://main.qcloudimg.com/raw/73f06a99dbd8373d94cb33ad78b1a46e.png)
+  ![](https://main.qcloudimg.com/raw/c38a44133f910f12be3605ce1acd7b0c.png)
 
 ### 5. 课件管理
 
@@ -136,7 +143,7 @@
 
 (2）管理员在上传课件时可以设置以下信息：
 
-- 点击【上传文件】按钮进行文件上传，控制台将根据上传的课件自动填充课件名字；
+- 点击【上传文件】按钮进行文件上传，控制台将根据上传的课件自动填充课件名字。支持ppt，pptx，pdf，doc，docx文件上传。
 
 - 点击【课件归属】，选择某位教师为课件归属人；
 
