--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -117,15 +117,15 @@
 
 ![](https://main.qcloudimg.com/raw/fa9931ff05f4c67032b2ecae66b2b805.png)
 
-- **编辑：**点击该节课堂信息中的【编辑】，进入【课堂信息】页面，重新编辑课堂信息。操作与创建课堂相同。
+- **编辑**：点击该节课堂信息中的【编辑】，进入【课堂信息】页面，重新编辑课堂信息。操作与创建课堂相同。
 
   >点击课堂名称也可进入【课堂信息】界面。
   >
   >已结束的课堂不可编辑课堂信息。
 
-- **删除：**点击该节课堂信息中的【删除】，删除课堂
+- **删除**：点击该节课堂信息中的【删除】，删除课堂
 
-- **查看详情：**点击该节课堂信息中的【查看详情】，即可获取课堂链接，课堂链接主要包含机构码和该课程id。
+- **查看详情**：点击该节课堂信息中的【查看详情】，即可获取课堂链接，课堂链接主要包含机构码和该课程id。
 
   > 管理员可以将链接分享给老师或学生，老师或学生在互动课堂客户端/移动端/web端输入链接，可直接进入链接所属课堂。
   >
