更新快速接入

--- a/Docs/SaaS/快速接入.md
+++ b/Docs/SaaS/快速接入.md
@@ -1,8 +1,10 @@
 ## 快速接入
 
-互动课堂SaaS组件为客户提供了一站式的在线教育服务。客户可以"零开发"实现音视频互动，聊天，白板，课件，成员管理等课堂体验。同时互动课堂SaaS组件也提供了丰富的自定义能力，助力客户打造自己想要的特色课堂。
+互动课堂SaaS组件为客户提供了一站式的在线教育服务。客户可以"零开发"实现音视频互动，聊天，白板，课件，成员管理等课堂体验。同时互动课堂SaaS组件也提供了丰富的自定义能力，助力客户打造自己想要的特色课堂。有两种方式可以接入互动课堂SaaS方案。
 
 ### SaaS方式接入
+
+客户完全免去开发，管理员通过[控制台](./%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C.md)进行用户，课堂，课件的管理。老师和学生直接下载腾讯云应用进行上课。
 
 ![接入交互图](https://main.qcloudimg.com/raw/da9f60ea73635b539141f64fa54b0dbc.jpg)
 
@@ -21,6 +23,8 @@
 
 
 ### 组件方式接入
+
+客户通过后台api在腾讯云服务端进行进行用户，课堂，课件的管理，并且将saas组件放入自己的app，从自己的app把组件调起进行上课。
 
 ![接入交互图](https://main.qcloudimg.com/raw/f4a1bfdf6978dd9e75f5ed2080d4b326.jpg)
 
