--- a/Docs/SaaS/快速接入.md
+++ b/Docs/SaaS/快速接入.md
@@ -39,6 +39,6 @@
 [Web](./Web端接入.md)
 
 ### 互动课堂SaaS组件使用手册
-- [互动课堂SaaS桌面端老师使用手册](./%E4%BA%92%E5%8A%A8%E8%AF%BE%E5%A0%82SaaS%E5%AD%A6%E7%94%9F%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C.md)
-- [互动课堂SaaS桌面端学生使用手册](./%E4%BA%92%E5%8A%A8%E8%AF%BE%E5%A0%82SaaS%E5%AD%A6%E7%94%9F%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C.md)
-- [互动课堂SaaS控制台使用手册](./%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C.md)
+- [桌面端老师使用手册](./%E4%BA%92%E5%8A%A8%E8%AF%BE%E5%A0%82SaaS%E5%AD%A6%E7%94%9F%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C.md)
+- [桌面端学生使用手册](./%E4%BA%92%E5%8A%A8%E8%AF%BE%E5%A0%82SaaS%E5%AD%A6%E7%94%9F%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C.md)
+- [控制台使用手册](./%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C.md)
