添加 SaaS 组件iOS集成文档

--- a/Docs/SaaS/快速接入.md
+++ b/Docs/SaaS/快速接入.md
@@ -37,6 +37,7 @@
 3. 终端接入
 [Electron (window / Mac)](./桌面端接入.md)
 [Web](./Web端接入.md)
+[iOS](./iOS端接入.md)
 
 ### 互动课堂SaaS组件使用手册
 - [桌面端老师使用手册](./%E4%BA%92%E5%8A%A8%E8%AF%BE%E5%A0%82SaaS%E5%AD%A6%E7%94%9F%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C.md)
