--- a/Docs/SaaS/快速接入.md
+++ b/Docs/SaaS/快速接入.md
@@ -29,15 +29,17 @@
 ![接入交互图](https://main.qcloudimg.com/raw/0e1fa994c0cd247dd99584b80d88d89d.jpg)
 
 1. 注册账号
-调用[后台API](./%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/%E4%BA%91API.md#21-%E5%88%9B%E5%BB%BA%E8%B4%A6%E5%8F%B7)在腾讯云创建老师和学生的账号。
+  调用[后台API](./%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/%E4%BA%91API.md#21-%E5%88%9B%E5%BB%BA%E8%B4%A6%E5%8F%B7)在腾讯云创建老师和学生的账号。
 
 2. 创建课堂
-调用[后台API](./%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/%E4%BA%91API.md#11-%E9%A2%84%E7%BA%A6%E8%AF%BE%E5%A0%82)在腾讯云创建课堂。
+  调用[后台API](./%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/%E4%BA%91API.md#11-%E9%A2%84%E7%BA%A6%E8%AF%BE%E5%A0%82)在腾讯云创建课堂。
 
 3. 终端接入
-[Electron (window / Mac)](./桌面端接入.md)
-[Web](./Web端接入.md)
-[iOS](./iOS端接入.md)
+  [Electron (window / Mac)](./桌面端接入.md)
+  [Web](./Web端接入.md)
+  [iOS](./iOS端接入.md)
+
+  [Android](./Android端接入.md)
 
 ### 互动课堂SaaS组件使用手册
 - [桌面端老师使用手册](./%E4%BA%92%E5%8A%A8%E8%AF%BE%E5%A0%82SaaS%E5%AD%A6%E7%94%9F%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C.md)
