--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -1,4 +1,4 @@
-# 控制台使用指南
+# 控制台使用手册
 
 
 ## 一. 确认服务已经开通
@@ -107,7 +107,6 @@
 
 管理员在【教学管理】>【课堂管理】页面，可查看目前所有课堂信息，包括课程ID，课程名称，课程状态（未开课/上课中/已结束），以及预约的开始结束时间等；通过右上方搜索栏，搜索课堂id可查看对应课堂信息。
 
->课程id由控制台后台自动生成。
 
 ![](https://main.qcloudimg.com/raw/32d0930db909339510127c963421b92a.png)
 
