文档优化/ios和macos替换2.3.1

--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -18,85 +18,73 @@
 </tr>
 <tr>
 <td rowspan=3>互动白板</td>
-<td>涂鸦功能</td><td>支持</td><td>支持</td>
+<td>涂鸦功能</td><td>✔</td><td>✔</td>
 </tr>
 <tr>
-<td>PPT/PDF/Word</td><td>支持</td><td>支持</td>
+<td>PPT/PDF/Word</td><td>✔</td><td>✔</td>
 </tr>
 <tr>
-<td>白板录制</td><td>支持</td><td>支持</td>
+<td>白板录制</td><td>✔</td><td>✔</td>
 </tr>
 <tr>
 <td rowspan=5>实时音视频</td>
-<td>音视频通话</td><td>支持</td><td>支持</td>
+<td>音视频通话</td><td>✔</td><td>✔</td>
 </tr>
 <tr>
-<td>音视频录制</td><td>支持</td><td>支持</td>
+<td>音视频录制</td><td>✔</td><td>✔</td>
 </tr>
 <tr>
-<td>播片</td><td>支持</td><td>支持</td>
+<td>播片</td><td>✔</td><td>✔</td>
 </tr>
 <tr>
-<td>屏幕分享</td><td>支持</td><td>支持</td>
+<td>屏幕分享</td><td>✔</td><td>✔</td>
 </tr>
 <tr>
-<td>设备检测</td><td>支持</td><td>支持</td>
+<td>设备检测</td><td>✔</td><td>✔</td>
 </tr>
 <tr>
 <td rowspan=2>云通信</td>
-<td>单聊</td><td>支持</td><td>支持</td>
+<td>单聊</td><td>✔</td><td>✔</td>
 </tr>
 <tr>
-<td>群聊</td><td>支持</td><td>支持</td>
+<td>群聊</td><td>✔</td><td>✔</td>
 </tr>
 <tr>
 <td rowspan=2>课堂界面</td>
-<td>大班课课堂界面</td><td>-</td><td>支持</td>
+<td>大班课课堂界面</td><td>-</td><td>✔</td>
 </tr>
 <tr>
-<td>小班课课堂界面</td><td>-</td><td>支持</td>
+<td>小班课课堂界面</td><td>-</td><td>✔</td>
 </tr>
 <tr>
 <td rowspan=5>业务模块</td>
-<td>课堂管理</td><td>-</td><td>支持</td>
+<td>课堂管理</td><td>-</td><td>✔</td>
 </tr>
 <tr>
-<td>课件管理</td><td>-</td><td>支持</td>
+<td>课件管理</td><td>-</td><td>✔</td>
 </tr>
 <tr>
-<td>自定义课件</td><td>-</td><td>支持</td>
+<td>自定义课件</td><td>-</td><td>✔</td>
 </tr>
 <tr>
-<td>课堂数据统计</td><td>-</td><td>支持</td>
+<td>课堂数据统计</td><td>-</td><td>✔</td>
 </tr>
 <tr>
-<td>课堂行为回调</td><td>-</td><td>支持</td>
+<td>课堂行为回调</td><td>-</td><td>✔</td>
 </tr>
 </table>
 
-#### SaaS体验
 ![](https://main.qcloudimg.com/raw/ea3692fd322dbcc7d86c3fc3cc6d3c59.jpg)
 
-| 平台 | 快速体验 |
-|---------|---------|
-| Web | 即将推出 |
-| 小程序 | 即将推出 |
-| Windows |  [申请体验](./购买指南.md) |
-| Android | 即将推出 |
-| iOS | 即将推出 |
-| macOS | [申请体验](./购买指南.md)  |
 
-
-#### PaaS体验
-
-| 平台 | 源码下载 | 快速体验 |
-|---------|---------|---------|
-| Web | [点击前往](https://github.com/tencentyun/TIC/tree/master) | [体验链接](https://tic-demo-1257240443.cos.ap-shanghai.myqcloud.com/index.html) |
-|小程序  | [点击前往](https://github.com/tencentyun/TIC/tree/master)   | ![](https://main.qcloudimg.com/raw/db3055ade262e17bcd8711026f487ae7.png) |
-| Windows |[点击前往](https://github.com/tencentyun/TIC/tree/master)  | - |
-|Android  | [点击前往](https://github.com/tencentyun/TIC/tree/master)  | - |
-| iOS | [点击前往](https://github.com/tencentyun/TIC/tree/master) | - |
-| macOS |[点击前往](https://github.com/tencentyun/TIC/tree/master)   | - |
+|所属平台|SaaS体验|PaaS体验|
+|-|-|-|
+|Web|即将推出|[体验链接](https://tic-demo-1259648581.cos.ap-shanghai.myqcloud.com/index.html)|
+|小程序|即将推出|<img src="https://main.qcloudimg.com/raw/b660a6c57aecebf6a0c749a1daf8532a.jpg" width="150"/>|
+|Windows|[申请体验](./购买指南.)|[下载安装](https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Windows.zip)|
+|Android|即将推出|<img src="https://main.qcloudimg.com/raw/cd2145e71c50374ddafae1714ee9f6e8.png" width="150"/>|
+|iOS|即将推出|<img src="https://main.qcloudimg.com/raw/1e40ee772f79317b14a0a55587343ae7.png" width="150"/>|
+|macOS|[申请体验](./购买指南.md)|[下载安装](https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Mac.zip)|
 
 
 ## 功能简介
