--- a/Docs/PaaS/快速开始.md
+++ b/Docs/PaaS/快速开始.md
@@ -1,13 +1,13 @@
 ## Demo 下载
 
-|所属平台|开发 Demo|接入文档|
-|:-:|:-:|:-:|
-|Android|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](./SDK文档/Android/互动课堂接入文档.md)|
-|iOS|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](./SDK文档/iOS/互动课堂接入文档.md)|
-|Windows|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](./SDK文档/Windows/互动课堂接入文档.md)|
-|macOS|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](./SDK文档/macOS/互动课堂接入文档.md)|
-|Web|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](./SDK文档/Web/互动课堂接入文档.md)|
-|小程序|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](./SDK文档/小程序/互动课堂接入文档.md)|
+|所属平台|Demo 下载|Demo 运行说明| TIC 接入文档| TEduBoard 接入文档|
+|:-:|:-:|:-:|:-:|:-:|
+|Android|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../Android/README.md)|[Doc](./SDK文档/Android/互动课堂接入文档.md)|[Doc](./SDK文档/Android/互动白板接入文档.md)|
+|iOS|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../iOS/README.md)|[Doc](./SDK文档/iOS/互动课堂接入文档.md)|[Doc](./SDK文档/iOS/互动白板接入文档.md)|
+|Windows|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../Windows/README.md)|[Doc](./SDK文档/Windows/互动课堂接入文档.md)|[Doc](./SDK文档/iOS/互动白板接入文档.md)|
+|macOS|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../macOS/README.md)|[Doc](./SDK文档/macOS/互动课堂接入文档.md)|[Doc](./SDK文档/iOS/互动白板接入文档.md)|
+|Web|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../Web/README.md)|[Doc](./SDK文档/Web/互动课堂接入文档.md)|[Doc](./SDK文档/iOS/互动白板接入文档.md)|
+|小程序|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../小程序/README.md)|[Doc](./SDK文档/小程序/互动课堂接入文档.md)|[Doc](./SDK文档/iOS/互动白板接入文档.md)|
 
 ## Demo 编译
 
