--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -9,69 +9,103 @@
 * `PaaS`方案提供了互动白板、实时音视频和群组聊天基础能力，您可以自定义白板、视频和聊天等交互界面，是一个更为灵活的在线教育解决方案。
 * `SaaS`方案仅需在客户端按协议调起互动课堂的组件，即可一站式的使用互动课堂提供的全部功能。包括互动白板能力、实时音视频能力、群组聊天能力、标准界面交互能力和云 API 课堂管理能力以及本地录制、播片等常见在线教育的基础能力。
 
-<table  class="tg">
-<tr>
-<td class="tg-s268">功能模块</td>
-<td class="tg-s268">功能项</td>
-<td class="tg-s268">PaaS</td>
-<td class="tg-s268">SaaS</td>
-</tr>
-<tr>
-<td rowspan=3>互动白板</td>
-<td>涂鸦功能</td><td>✔</td><td>✔</td>
-</tr>
-<tr>
-<td>PPT/PDF/Word</td><td>✔</td><td>✔</td>
-</tr>
-<tr>
-<td>白板录制</td><td>✔</td><td>✔</td>
-</tr>
-<tr>
-<td rowspan=5>实时音视频</td>
-<td>音视频通话</td><td>✔</td><td>✔</td>
-</tr>
-<tr>
-<td>音视频录制</td><td>✔</td><td>✔</td>
-</tr>
-<tr>
-<td>播片</td><td>✔</td><td>✔</td>
-</tr>
-<tr>
-<td>屏幕分享</td><td>✔</td><td>✔</td>
-</tr>
-<tr>
-<td>设备检测</td><td>✔</td><td>✔</td>
-</tr>
-<tr>
-<td rowspan=2>云通信</td>
-<td>单聊</td><td>✔</td><td>✔</td>
-</tr>
-<tr>
-<td>群聊</td><td>✔</td><td>✔</td>
-</tr>
-<tr>
-<td rowspan=2>课堂界面</td>
-<td>大班课课堂界面</td><td>-</td><td>✔</td>
-</tr>
-<tr>
-<td>小班课课堂界面</td><td>-</td><td>✔</td>
-</tr>
-<tr>
-<td rowspan=5>业务模块</td>
-<td>课堂管理</td><td>-</td><td>✔</td>
-</tr>
-<tr>
-<td>课件管理</td><td>-</td><td>✔</td>
-</tr>
-<tr>
-<td>自定义课件</td><td>-</td><td>✔</td>
-</tr>
-<tr>
-<td>课堂数据统计</td><td>-</td><td>✔</td>
-</tr>
-<tr>
-<td>课堂行为回调</td><td>-</td><td>✔</td>
-</tr>
+<table>
+    <tr>
+        <th style="text-align:center">功能模块</th>
+        <th style="text-align:center">功能项</th>
+        <th style="text-align:center">PaaS方案</th>
+        <th style="text-align:center">SaaS方案</th>
+    </tr>
+    <tr>
+        <td rowspan='3' style="text-align:center">互动白板</td>
+        <td style="text-align:center">涂鸦功能</td>
+        <td style="text-align:center">✔</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">PPT/PDF/Word</td>
+        <td style="text-align:center">✔</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">白板录制</td>
+        <td style="text-align:center">✔</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td rowspan=5 style="text-align:center">实时音视频</td>
+        <td style="text-align:center">音视频通话</td>
+        <td style="text-align:center">✔</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">音视频录制</td>
+        <td style="text-align:center">✔</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">播片</td>
+        <td style="text-align:center">✔</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">屏幕分享</td>
+        <td style="text-align:center">✔</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">设备检测</td>
+        <td style="text-align:center">✔</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+    <td rowspan=2>云通信</td>
+        <td style="text-align:center">单聊</td>
+        <td style="text-align:center">✔</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">群聊</td>
+        <td style="text-align:center">✔</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+    <td rowspan=2>课堂界面</td>
+        <td style="text-align:center">大班课课堂界面</td>
+        <td style="text-align:center">-</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">小班课课堂界面</td>
+        <td style="text-align:center">-</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td rowspan=5 style="text-align:center">业务模块</td>
+        <td style="text-align:center">课堂管理</td>
+        <td style="text-align:center">-</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">课件管理</td>
+        <td style="text-align:center">-</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">自定义课件</td>
+        <td style="text-align:center">-</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">课堂数据统计</td>
+        <td style="text-align:center">-</td>
+        <td style="text-align:center">✔</td>
+    </tr>
+    <tr>
+        <td style="text-align:center">课堂行为回调</td>
+        <td style="text-align:center">-</td>
+        <td style="text-align:center">✔</td>
+    </tr>
 </table>
 
 ![](https://main.qcloudimg.com/raw/ea3692fd322dbcc7d86c3fc3cc6d3c59.jpg)
