--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -11,8 +11,8 @@
 
 <table>
     <tr>
-        <th style="text-align:center">功能模块</th>
-        <th style="text-align:center">功能项</th>
+        <th width="120px" style="text-align:center">功能模块</th>
+        <th width="120px" style="text-align:center">功能项</th>
         <th style="text-align:center">PaaS方案</th>
         <th style="text-align:center">SaaS方案</th>
     </tr>
@@ -59,7 +59,7 @@
         <td style="text-align:center">✔</td>
     </tr>
     <tr>
-    <td rowspan=2>云通信</td>
+    <td rowspan=2 style="text-align:center">云通信</td>
         <td style="text-align:center">单聊</td>
         <td style="text-align:center">✔</td>
         <td style="text-align:center">✔</td>
@@ -70,7 +70,7 @@
         <td style="text-align:center">✔</td>
     </tr>
     <tr>
-    <td rowspan=2>课堂界面</td>
+    <td rowspan=2 style="text-align:center">课堂界面</td>
         <td style="text-align:center">大班课课堂界面</td>
         <td style="text-align:center">-</td>
         <td style="text-align:center">✔</td>
@@ -112,7 +112,7 @@
 
 
 |所属平台|SaaS体验|PaaS体验|
-|-|-|-|
+|:-:|:-:|:-:|
 |Web|即将推出|[体验链接](https://tic-demo-1259648581.cos.ap-shanghai.myqcloud.com/index.html)|
 |小程序|即将推出|<img src="https://main.qcloudimg.com/raw/b660a6c57aecebf6a0c749a1daf8532a.jpg" width="150"/>|
 |Windows|[申请体验](./购买指南.)|[下载安装](https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Windows.zip)|
