--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -111,15 +111,35 @@
 ![](https://main.qcloudimg.com/raw/ea3692fd322dbcc7d86c3fc3cc6d3c59.jpg)
 
 
-|所属平台|SaaS 体验|PaaS 体验|
-|:-:|:-:|:-:|
-|Web|即将推出|[体验链接](https://tic-demo-1259648581.cos.ap-shanghai.myqcloud.com/index.html)|
-|小程序|即将推出|<img src="https://main.qcloudimg.com/raw/b660a6c57aecebf6a0c749a1daf8532a.jpg" width="150"/>|
-|Windows|[申请体验](./购买指南.)|[下载安装](https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Windows.zip)|
-|Android|即将推出|<img src="https://main.qcloudimg.com/raw/cd2145e71c50374ddafae1714ee9f6e8.png" width="150"/>|
-|iOS|即将推出|<img src="https://main.qcloudimg.com/raw/1e40ee772f79317b14a0a55587343ae7.png" width="150"/>|
-|macOS|[申请体验](./购买指南.md)|[下载安装](https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Mac.zip)|
-
+<table>
+    <tr>
+    <th style="text-align:center"></th>
+        <th style="text-align:center">Web</th>
+        <th style="text-align:center">小程序</th>
+        <th style="text-align:center">Windows</th>
+        <th style="text-align:center">Android</th>
+        <th style="text-align:center">iOS</th>
+        <th style="text-align:center">macOS</th>
+    </tr>
+    <tr>
+        <td style="text-align:center">SaaS 体验</td>
+        <td style="text-align:center">即将推出</td>
+        <td style="text-align:center">即将推出</td>
+        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
+        <td style="text-align:center">即将推出</td>
+        <td style="text-align:center">即将推出</td>
+        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
+    </tr>
+    <tr>
+        <td style="text-align:center">PaaS 体验</td>
+        <td style="text-align:center"><a href="https://tic-demo-1259648581.cos.ap-shanghai.myqcloud.com/index.html">体验链接</a></td>
+        <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/b660a6c57aecebf6a0c749a1daf8532a.jpg" width="150"/></td>
+        <td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Windows.zip">下载安装</a></td>
+        <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/cd2145e71c50374ddafae1714ee9f6e8.png" width="150"/></td>
+        <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/1e40ee772f79317b14a0a55587343ae7.png" width="150"/></td>
+        <td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Mac.zip">下载安装</a></td>
+    </tr>
+</table>
 
 ## 功能简介
 
