--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -9,6 +9,8 @@
 * `PaaS`方案提供了互动白板、实时音视频和群组聊天基础能力，您可以自定义白板、视频和聊天等交互界面，是一个更为灵活的在线教育解决方案。
 * `SaaS`方案仅需在客户端按协议调起互动课堂的组件，即可一站式的使用互动课堂提供的全部功能。包括互动白板能力、实时音视频能力、群组聊天能力、标准界面交互能力和云 API 课堂管理能力以及本地录制、播片等常见在线教育的基础能力。
 
+#### 方案差异
+
 <table>
     <tr>
         <th width="120px" style="text-align:center">功能模块</th>
@@ -108,12 +110,12 @@
     </tr>
 </table>
 
-![](https://main.qcloudimg.com/raw/ea3692fd322dbcc7d86c3fc3cc6d3c59.jpg)
+#### SaaS 体验
 
+![](https://main.qcloudimg.com/raw/ea3692fd322dbcc7d86c3fc3cc6d3c59.jpg)
 
 <table>
     <tr>
-    <th style="text-align:center"></th>
         <th style="text-align:center">Web</th>
         <th style="text-align:center">小程序</th>
         <th style="text-align:center">Android</th>
@@ -122,7 +124,6 @@
         <th style="text-align:center">Windows</th>
     </tr>
     <tr>
-        <td style="text-align:center">SaaS 体验</td>
         <td style="text-align:center">即将推出</td>
         <td style="text-align:center">即将推出</td>
         <td style="text-align:center">即将推出</td>
@@ -130,8 +131,20 @@
         <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
         <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
     </tr>
+</table>
+
+#### PaaS 体验
+
+<table>
     <tr>
-        <td style="text-align:center">PaaS 体验</td>
+        <th style="text-align:center">Web</th>
+        <th style="text-align:center">小程序</th>
+        <th style="text-align:center">Android</th>
+        <th style="text-align:center">iOS</th>
+        <th style="text-align:center">macOS</th>
+        <th style="text-align:center">Windows</th>
+    </tr>
+    <tr>
         <td style="text-align:center"><a href="https://tic-demo-1259648581.cos.ap-shanghai.myqcloud.com/index.html">体验链接</a></td>
         <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/b660a6c57aecebf6a0c749a1daf8532a.jpg" width="150"/></td>
         <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/cd2145e71c50374ddafae1714ee9f6e8.png" width="150"/></td>
