--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -124,10 +124,10 @@
         <th style="text-align:center">Windows</th>
     </tr>
     <tr>
-        <td style="text-align:center">即将推出</td>
-        <td style="text-align:center">即将推出</td>
-        <td style="text-align:center">即将推出</td>
-        <td style="text-align:center">即将推出</td>
+        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
+        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
+        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
+        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
         <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
         <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
     </tr>
