--- a/Docs/PaaS/SDK文档/Windows/互动课堂接入文档.md
+++ b/Docs/PaaS/SDK文档/Windows/互动课堂接入文档.md
@@ -37,35 +37,23 @@
 2. 项目配置
 在使用SDK的项目上右键，选择【属性】，对项目属性进行配置；
 （1）附加包含目录：
-    项目【属性】-->【C/C++】-->【附加包含目录】-->将所有`依赖SDK`的头文件以及`TIC源码`所在目录路径添加到这里；
-例如:
-
-```
-./TIM/includes;./TRTC/include;./TEduBoard/include;
-```
+项目【属性】-->【C/C++】-->【附加包含目录】-->将所有`依赖SDK`的头文件以及`TIC源码`所在目录路径添加到这里；
+例如: `./TIM/includes;./TRTC/include;./TEduBoard/include;`
 
 （2）附加库目录：
 项目【属性】-->【链接器】-->【附加库目录】-->将所有`依赖SDK`的导入库所在目录路径添加到这里;
-例如：
+例如：`./TIM/lib/Release;./TRTC/lib;./TEduBoard/lib;`
 
-```
-./TIM/lib/Release;./TRTC/lib;./TEduBoard/lib;
-```
 > 注意: 这里IMSDK分Debug和Release版本，项目的Debug和Release版本对应IMSDK的导入库路径不一样;
 
 3. 引入头文件
 在需要使用`TIC`的源码文件内添加如下代码引入`TIC`头文件。
 
 ```cpp
-// 引入 TIC 头文件
-#include "TICManager.h"
+#include "TICManager.h" // 引入 TIC 头文件
 ```
 
-> 注意: 一般大型项目中都会使用预编译头(stdaf.h)来加快编译速度,所以，TIC目录下所有cpp文件都在顶部包含了"stdafx.h"；如果您的项目中，没有使用预编译头，需要将TIC目录及其子目录下的所有cpp文件的第一行注释掉，如，
-
-```
-//#include "stdafx.h"
-```
+> 注意: 一般大型项目中都会使用预编译头(stdaf.h)来加快编译速度,所以，TIC目录下所有cpp文件都在顶部包含了"stdafx.h"；如果您的项目中，没有使用预编译头，需要将TIC目录及其子目录下的所有cpp文件的第一行注释掉;
 
 ### 基本使用流程
 ![TIC使用流程](https://gitee.com/uploads/images/2019/0428/205955_90abcd21_1637273.png "TICFlow.png")
