ppt转码 添加 -28    ppt 包含自动翻页

--- a/Docs/PaaS/文档转码.md
+++ b/Docs/PaaS/文档转码.md
@@ -383,6 +383,7 @@ Body 参数（JSON 格式）
 | -25    | ppt 下载链接打开超时                  | 请检查 ppt下载链接是否有效或下载服务器网络状况          |
 | -26    | ppt 下载数据失败                      | 请检查 ppt下载服务器网络状况                              |
 | -27    | ppt 下载数据超时                      | 请检查 ppt下载服务器网络状况或是否 ppt 过大，导致下载超时 |
+| -28    | ppt 包含自动翻页                      | 请根据错误信息中的页数,检查 该页 和 该页之后的页 是否有自动翻页;</br>如果错误信息中，无具体页数"Page unkown"，则代表无法获取某一页含有自动翻页，请手动确认或联系管理员 |
 | -101  | task info 文件读取失败           | 请联系维护人员             |
 | -102  | task info 格式不正确             | 请联系维护人员             |
 | -103  | task info 的 error_code 不等于0 | 请联系维护人员             |
