--- a/Docs/PaaS/SDK文档/互动白板接口文档.md
+++ b/Docs/PaaS/SDK文档/互动白板接口文档.md
@@ -76,6 +76,36 @@
 | TEDU_BOARD_CONTENT_FIT_MODE_CENTER_INSIDE| 1|自动调整白板宽高比与内容一致，内容铺满白板，白板等比例缩放居中显示，白板宽高 <= 容器宽高 |
 | TEDU_BOARD_CONTENT_FIT_MODE_CENTER_COVER| 2|自动调整白板宽高比与内容一致，内容铺满白板，白板等比例缩放居中显示，白板宽高 >= 容器宽高 |
 
+### 箭头类型
+
+TEduBoardArrowType
+
+|当前状态|具体值|说明|
+|-|-|-|
+|TEDU_BOARD_ARROW_TYPE_NONE|1|无箭头 |
+|TEDU_BOARD_ARROW_TYPE_NORMAL|2|普通箭头|
+|TEDU_BOARD_ARROW_TYPE_SOLID|3|实心箭头|
+
+### 直线类型
+
+TEduBoardLineType
+
+|当前状态|具体值|说明|
+|-|-|-|
+|TEDU_BOARD_LINE_TYPE_SOLID|1|实线|
+|TEDU_BOARD_LINE_TYPE_DOTTED|2|虚线|
+
+
+### 椭圆绘制模式
+
+TEduBoardOvalDrawMode
+
+|当前状态|具体值|说明|
+|-|-|-|
+|TEDU_BOARD_OVAL_DRAW_MODE_FIX_START|1|固定起始点，起始点和终点的中点为圆心|
+|TEDU_BOARD_OVAL_DRAW_MODE_FIX_CENTER|2|固定圆心，起始点为圆心|
+
+
 
 ## 回调接口（TEduBoardCallback）
 ### 基本流程回调
@@ -359,6 +389,20 @@ int contentFitMode = TEduBoardContentFitMode.TEDU_BOARD_CONTENT_FIT_MODE_NONE; /
 | smoothLevel | Number | 0.1 | 平滑级别，取值0～1之间的浮点数，0表示不启用平滑 |
 
 
+**直线样式（TEduBoardLineStyle）**
+```
+class TEduBoardLineStyle {  
+TEduBoardLineType lineType;
+TEduBoardArrowType startArrowType;
+TEduBoardArrowType endArrowType;
+}
+```
+|  成员  | 类型       | 说明 |
+| -- | --------- | ------------------ |
+|   lineType| TEduBoardLineType | 直线类型|
+|   startArrowType| TEduBoardArrowType | 起点箭头类型 |
+|   endArrowType| TEduBoardArrowType | 终点箭头类型 |
+
 ## 具体接口
 
 ### 基本流程接口
@@ -370,7 +414,7 @@ void addCallback(TEduBoardCallback callback);
 |  参数值  | 类型       | 说明 |
 | -- | --------- | ------------------ |
 |   callback| TEduBoardCallback | 事件回调监听 |
->?
+
 1. 建议在 Init 之前调用该方法以支持错误处理；
 2. 内部是弱引用持有 callback 对象。
 
@@ -689,7 +733,8 @@ void setBoardContentFitMode(int mode);
 |  参数值  | 类型       | 说明 |
 | -- | --------- | ------------------ |
 |   mode| int | 要设置的白板内容自适应模式 |
->?设置自适应模式后会影响所有后续白板内容操作,受影响接口包括：AddFile 和 AddH5PPTFile。
+
+设置自适应模式后会影响所有后续白板内容操作,受影响接口包括：AddFile 和 AddH5PPTFile。
 
 **获取白板内容自适应模式**
 ```
@@ -698,6 +743,43 @@ int getBoardContentFitMode();
 |  返回值类型        | 说明 |
 |  --------- | ------------------ |
 |   int| 获取白板内容自适应模式|
+
+
+**设置直线样式**
+```
+void setLineStyle(TEduBoardLineStyle style);
+```
+|参数值|类型|说明|
+|-|-|-|
+|style|TEduBoardLineStyle|设置直线样式|
+
+**获取直线样式**
+```
+TEduBoardLineStyle getLineStyle();
+```
+|  返回值类型        | 说明 |
+|  --------- | ------------------ |
+|   TEduBoardLineStyle| 获取直线样式|
+
+**设置椭圆绘制模式**
+```
+void setOvalDrawMode(TEduBoardLineStyle mode);
+```
+|参数值|类型|说明|
+|-|-|-|
+|mode|TEduBoardLineStyle|设置椭圆绘制模式|
+
+**获取椭圆绘制模式**
+```
+TEduBoardOvalDrawMode getOvalDrawMode();
+```
+|  返回值类型        | 说明 |
+|  --------- | ------------------ |
+|   TEduBoardOvalDrawMode| 获取椭圆绘制模式|
+
+
+
+
 
 ### 白板操作接口
 
