--- a/Docs/PaaS/SDK文档/Web/互动白板接入文档.md
+++ b/Docs/PaaS/SDK文档/Web/互动白板接入文档.md
@@ -8,7 +8,7 @@
 <!-- COS SDK -->
 <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/cos/5.1.0/cos.min.js"></script>
 <!-- 白板SDK -->
-<script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.1/TEduBoard.min.js"></script>
+<script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.2/TEduBoard.min.js"></script>
 ```
 
 | 类        | 说明                                       |
@@ -56,8 +56,6 @@
 | getTextSize              | 获取文本大小                           |
 | setTextStyle             | 设置文本样式                           |
 | getTextStyle             | 获取文本样式                           |
-| setTextFamily            | 设置文本体                             |
-| getTextFamily            | 获取文本字体                           |
 | setBackgroundImage       | 设置当前白板页的背景图片               |
 | setBackgroundH5          | 设置当前白板页的 H5 背景               |
 | undo                     | 撤销当前白板页上一次动作               |
@@ -74,6 +72,11 @@
 | setBoardContentFitMode   | 设置白板文件的显示方式                 |
 | getBoardContentFitMode   | 获取白板文件的显示方式                 |
 | getFileInfo              | 获取指定文件的信息                     |
+| addTranscodeFile         | 添加转码文件                          |
+| setLineStyle         | 设置直线样式                          |
+| getLineStyle         | 获取直线样式                          |
+| setOvalDrawMode         | 设置椭圆绘制模式                        |
+| getOvalDrawMode         | 获取椭圆绘制模式                        |
 
 ## 实例化白板
 
@@ -614,27 +617,6 @@ var textStyle = teduBoard.getTextStyle()
 | --------- | ------ | -------- |
 | textStyle | Number | 文本样式 |
 
-
-#### 设置文本字体
-
-```
-teduBoard.setTextFamily(textFamily)
-```
-
-| 参数       | 类型   | 是否必填 | 说明 |
-| ---------- | ------ | -------- | ---- |
-| textFamily | String | 是       | 字体 |
-
-#### 获取文本字体
-
-```
-var textFamily = teduBoard.getTextFamily()
-```
-
-| 返回值     | 类型   | 说明 |
-| ---------- | ------ | ---- |
-| textFamily | String | 字体 |
-
 #### 设置当前白板显示比例
 
 ```
@@ -736,6 +718,94 @@ var fileInfo = teduBoard.getFileInfo(fid)
 | fileInfo | Object | 文件信息 |
 
 
+#### 添加转码文件
+
+```
+var fid = teduBoard.addTranscodeFile(file)
+```
+
+| 参数 | 类型   | 是否必填 | 说明    |
+| ---- | ------ | -------- | ------- |
+| file.title  | String | 是       | 文件名 |
+| file.resolution  | String | 是       | 文件的分辨率 |
+| file.url  | String | 是       | 转码后的url |
+| file.pages  | Number | 是       | 文件总页数 |
+
+| 返回值   | 类型   | 说明     |
+| -------- | ------ | -------- |
+| fid | String | 文件id |
+
+```
+teduBoard.addTranscodeFile({
+  title: 'test.ppt',   // 文件名
+  resolution: "1024x768",  // 文件的宽高比
+  url: 'https://test04-1257240443.cos.ap-shanghai.myqcloud.com/0o5stagbd6b264ei59jb/index.html', // 转码后的url
+  pages: 21 // 文件总页数
+})
+```
+
+#### 设置直线样式
+
+```
+teduBoard.setLineStyle(lineStyle)
+```
+
+| 参数 | 类型   | 是否必填 | 说明    |
+| ---- | ------ | -------- | ------- |
+| lineStyle.lineType  | Number | 否， 默认1    | 直线样式 1： 实线 2：虚线 |
+| lineStyle.startArrowType  | Number | 否，默认1 | 直线开始样式  1: 无箭头 2: 普通箭头 3: 实心箭头 |
+| lineStyle.endArrowType  | Number | 否，默认1  | 直线结束样式 1: 无箭头 2: 普通箭头 3: 实心箭头 |
+
+
+```
+teduBoard.setLineStyle({
+  lineType: 2,  // 虚线
+  startArrowType: 2,  // 普通箭头
+  endArrowType: 3,   // 实心箭头
+})
+```
+
+#### 获取直线样式
+
+```
+var lineStyle = teduBoard.getLineStyle()
+```
+
+| 返回值   | 类型   | 说明     |
+| -------- | ------ | -------- |
+| lineStyle.lineType | Number | 直线样式 1： 实线 2：虚线 |
+| lineStyle.startArrowType  | Number | 直线开始样式  1: 无箭头 2: 普通箭头 3: 实心箭头 |
+| lineStyle.endArrowType  | Number | 直线结束样式 1: 无箭头 2: 普通箭头 3: 实心箭头 |
+
+
+
+#### 设置椭圆绘制模式
+
+```
+teduBoard.setOvalDrawMode(drawMode)
+```
+
+| 参数 | 类型   | 是否必填 | 说明    |
+| ---- | ------ | -------- | ------- |
+| drawMode  | Number | 否， 默认1    | 1: 固定起始点，起始点和终点的中点为圆心<br/> 2: 固定圆心，起始点为圆心|
+
+
+```
+teduBoard.setOvalDrawMode(2)
+```
+
+
+#### 获取椭圆绘制模式
+
+```
+var drawMode = teduBoard.getOvalDrawMode()
+```
+
+| 返回值   | 类型   | 说明     |
+| -------- | ------ | -------- |
+| drawMode | Number | 1: 固定起始点，起始点和终点的中点为圆心<br/> 2: 固定圆心，起始点为圆心 |
+
+
 
 ### 白板事件
 
@@ -832,7 +902,7 @@ boardSdk.off();
 
 | 回调参数 | 类型   | 说明                                                         |
 | -------- | ------ | ------------------------------------------------------------ |
-| code     | Number | 警告回调类型 <br> 1：接收到其他端的同步数据解析错误 <br> 2：上传的文件已经存在，不能重复上传 |
+| code     | Number | 警告回调类型 <br> 1：接收到其他端的同步数据解析错误 <br> 3：上传的文件已经存在，不能重复上传 <br> 5：历史数据同步完成前，禁止操作白板 |
 | msg      | String | 错误信息                                                     |
 
 #### TEduBoard.EVENT.TEB_IMAGE_STATUS_CHANGED
@@ -947,3 +1017,12 @@ H5 背景加载状态。
 | data                  | Object | 当前白板背景数据                                          |
 | - data.currentBoardId | String | 当前的白板 ID                                             |
 | - data.url            | String | 当前白板的 H5 背景 url                                    |
+
+
+#### TEduBoard.EVENT.TEB_ADDTRANSCODEFILE
+
+增加转码文件回调。
+
+| 回调参数 | 类型   | 说明           |
+| -------- | ------ | -------------- |
+| fid      | String | 文件的 fid |
