开放体验DEMO入口

--- a/Docs/SaaS/快速体验.md
+++ b/Docs/SaaS/快速体验.md
@@ -84,7 +84,7 @@
 
 | Web | 小程序 | Windows | Android | iOS | macOS |
 | :-: | :-: | :-: | :-: | :-: | :-: |
-| 即将推出 | 即将推出 | [申请体验](../购买指南.md) | 即将推出 | 即将推出 | [申请体验](../购买指南.md) |
+| [立即体验](https://tedu.qcloudtrtc.com/) | 即将推出 | [立即体验](../购买指南.md) | [立即体验](https://sj.qq.com/myapp/detail.htm?apkName=com.tencent.ticsaas.demo) |  [立即体验](https://www.pgyer.com/QEpl) | [立即体验](http://dldir1.qq.com/hudongzhibo/Saas/TClass_Demo.dmg) |
 
 **控制台**
 请参照**开通账户开通指引**，获得 SAAS 体验账号、控制台地址和使用文档。
