--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -124,12 +124,12 @@
         <th style="text-align:center">Windows</th>
     </tr>
     <tr>
-        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
-        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
-        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
-        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
-        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
-        <td style="text-align:center"><a href="./购买指南.md">申请体验</a></td>
+        <td style="text-align:center"><a href="https://tedu.qcloudtrtc.com/">立即体验</a></td>
+        <td style="text-align:center">即将推出</td>
+        <td style="text-align:center"><a href="https://sj.qq.com/myapp/detail.htm?apkName=com.tencent.ticsaas.demo">立即体验</a></td>
+        <td style="text-align:center"><a href="https://www.pgyer.com/QEpl">立即体验</a></td>
+        <td style="text-align:center"><a href="http://dldir1.qq.com/hudongzhibo/Saas/TClass_Demo.dmg">立即体验</a></td>
+        <td style="text-align:center"><a href="http://dldir1.qq.com/hudongzhibo/Saas/TClass_Setup_Demo.exe">立即体验</a></td>
     </tr>
 </table>
 
@@ -145,12 +145,12 @@
         <th style="text-align:center">Windows</th>
     </tr>
     <tr>
-        <td style="text-align:center"><a href="https://tic-demo-1259648581.cos.ap-shanghai.myqcloud.com/index.html">体验链接</a></td>
+        <td style="text-align:center"><a href="https://tic-demo-1259648581.cos.ap-shanghai.myqcloud.com/index.html">立即体验</a></td>
         <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/b660a6c57aecebf6a0c749a1daf8532a.jpg" width="150"/></td>
         <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/cd2145e71c50374ddafae1714ee9f6e8.png" width="150"/></td>
         <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/1e40ee772f79317b14a0a55587343ae7.png" width="150"/></td>
-        <td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Mac.zip">下载安装</a></td>
-        <td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Windows.zip">下载安装</a></td>
+        <td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Mac.zip">立即体验</a></td>
+        <td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Windows.zip">立即体验</a></td>
     </tr>
 </table>
 
