--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -126,12 +126,13 @@
     <tr>
         <td style="text-align:center"><a href="https://tedu.qcloudtrtc.com/">立即体验</a></td>
         <td style="text-align:center">即将推出</td>
-        <td style="text-align:center"><a href="https://sj.qq.com/myapp/detail.htm?apkName=com.tencent.ticsaas.demo">立即体验</a></td>
-        <td style="text-align:center"><a href="https://www.pgyer.com/QEpl">立即体验</a></td>
+        <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/16f8257480f512b42bd16dc9a68e23b5.png" width="150"/></td>
+        <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/35664baf9512c57ac3c2b5436ab5d567.png" width="150"/></td>
         <td style="text-align:center"><a href="http://dldir1.qq.com/hudongzhibo/Saas/TClass_Demo.dmg">立即体验</a></td>
         <td style="text-align:center"><a href="http://dldir1.qq.com/hudongzhibo/Saas/TClass_Setup_Demo.exe">立即体验</a></td>
     </tr>
 </table>
+
 
 #### PaaS 体验
 
@@ -156,12 +157,12 @@
 
 ## 功能简介
 
-腾讯云在线教育互动课堂解决方案 提供全平台互通的高可靠互动白板服务、高品质实时音视频服务以及高并发即时通讯服务，可快速从零开始搭建出在线教育平台。
+腾讯云在线教育互动课堂解决方案提供全平台互通的高可靠互动白板服务、高品质实时音视频服务以及高并发即时通讯服务，可快速从零开始搭建出在线教育平台。
 
 #### 互动白板
 
 * 支持基本涂鸦，如铅笔、鼠标、激光笔和橡皮擦。
-* 支持标准图形，如直线、空心椭圆，实心椭圆、空心矩形和实心矩形。
+* 支持标准图形，如直线、空心椭圆、实心椭圆、空心矩形和实心矩形。
 * 支持背景设置，如背景颜色、背景图片和背景 H5。
 * 支持多行文本输入，可设置文本颜色、字体和大小。
 * 支持框选、移动缩放、多种手势和撤销重做。
