windows接入文档优化

--- a/Docs/PaaS/SDK文档/Windows/互动课堂接入文档.md
+++ b/Docs/PaaS/SDK文档/Windows/互动课堂接入文档.md
@@ -53,6 +53,9 @@
 XCOPY /Y /E $(ProjectDir)..\SDK\TEduBoard\lib $(OutDir)
 COPY /Y $(ProjectDir)..\SDK\TIM\lib\$(Configuration) $(OutDir)
 COPY /Y $(ProjectDir)..\SDK\TRTC\lib $(OutDir)
+DEL /F /Q $(OutDir)TEduBoard.lib
+DEL /F /Q $(OutDir)imsdk.lib
+DEL /F /Q $(OutDir)liteav.lib
 ```
 
 3. 引入头文件
