--- a/Docs/接入指引2.md
+++ b/Docs/接入指引2.md
@@ -4,25 +4,27 @@
 
 为了适应不同客户的需求，我们把互动课堂的接入方案分成了SAAS、半SAAS和PAAS三种。下面的表中列举了这三种方案的主要区别，客户可以根据自身情况灵活选择。我们也支持这三种方案的无缝切换。
 
-|  | SAAS | 半SAAS | PAAS |
+|  | SAAS | SAAS组件 | PAAS |
 | :-- | :-- | :-- | :-- |
 | 上线速度 | 最快(1天) | 适中(约1周) | 最长 |
-| 控制台课程管理 | 支持 | 支持 | 不支持 |
-| 客户端开发 | 不需要 | 需要集成组件 | 需客户自己开发 |
-| 自定义课堂界面 | 不支持 | 不支持 | 支持 |
-| 录制 | 本地/云端 | 本地/云端 | 云端 |
+| 课程管理 | 控制台 | 控制台/云API | 不支持 |
+| 客户端开发 | 不需要 | 需要集成组件 | 需集成SDK |
+| 自定义上课UI | 选择模板 | 选择模板 | 需客户自己开发 |
+| 自定义机构名 | 支持 | 支持 | 支持 |
+| 视频和白板录制 | 本地/云端 | 本地/云端 | 云端 |
 | 数据统计和回调 | 支持 | 支持 | 不支持 |
 
+功能模块列表：
 
-| 功能 | Pc/mac | 桌面chrome | Android/ios | 小程序 |
+| 功能 | pc/mac | 桌面chrome | Android/ios | 小程序 |
 | --- | --- | --- | --- | --- |
 | 实时音视频 | 支持 | 支持 | 支持 | 支持 |
 | 直播 | 支持 | 支持 | 支持 | 支持 |
 | 点播 | 支持 | 支持 | 支持 | 支持 |
 | 本地录制 | 支持 |  |   |  |
 | 云端录制 | 支持 | 支持 | 支持 | 支持 |
-| 屏幕分享 | 支持 |  |  |  |
-| 播片 | 支持 |   | 支持 |  |
+| 屏幕分享 | 支持 | 仅观看 | 仅观看 | 仅观看 |
+| 播片 | 支持 | 仅观看  | 仅观看 | 仅观看 |
 | 互动白板 | 支持 | 支持 | 支持 | 支持 |
 | IM聊天 | 支持 | 支持 | 支持 | 支持 |
 
@@ -40,10 +42,10 @@
 - [移动端使用手册]
 
 
-### 半SAAS方案文档 
+### SAAS组件方案文档 
 
-1. 通过接入云API，把互动课堂管理、课件转码和录制能力集成到客户自己的管理系统里(也可以根据需要使用控制台)。
-2. 在客户端集成互动课堂客户端组件。通过命令行调用组件，进入课堂，完成上课。
+1. 客户通过接入云API，把互动课堂管理、课件转码和录制等能力集成到客户自己的管理系统里(也可以根据需要使用控制台)。
+2. 客户在自己的客户端app里集成互动课堂组件。通过命令行调用组件，进入课堂，完成上课。
 
 - [互动课堂业务云API](./SaaS/%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/%E4%BA%91API.md)
 - [桌面端组件接入手册]
@@ -52,8 +54,8 @@
 
 ### PAAS方案文档
 
-1. 通过集成云端API，实现课件转码和录制功能。
-2. 按客户自身的业务逻辑，集成互动白板、音视频和IM SDK，完成上课流程的闭环。
+1. 通过集成云端API，实现课件转码和录制等功能。
+2. 客户按自身的业务逻辑，集成互动白板、音视频和IM SDK，完成上课流程的闭环。
 
 - [文档转码服务](./PaaS/%E6%96%87%E6%A1%A3%E8%BD%AC%E7%A0%81.md)
 - [后台实时录制服务](./PaaS/%E5%AE%9E%E6%97%B6%E5%BD%95%E5%88%B6.md)
