--- a/Docs/接入指引2.md
+++ b/Docs/接入指引2.md
@@ -4,7 +4,7 @@
 
 为了适应不同客户的需求，我们把互动课堂的接入方案分成了SAAS、半SAAS和PAAS三种。下面的表中列举了这三种方案的主要区别，客户可以根据自身情况灵活选择。我们也支持这三种方案的无缝切换。
 
-|  | SAAS | SAAS组件 | PAAS |
+|  | SAAS | 课堂组件 | PAAS |
 | :-- | :-- | :-- | :-- |
 | 上线速度 | 最快(1天) | 适中(约1周) | 最长 |
 | 课程管理 | 控制台 | 控制台/云API | 不支持 |
@@ -42,7 +42,7 @@
 - [移动端使用手册]
 
 
-### SAAS组件方案文档 
+### 课堂组件方案文档 
 
 1. 客户通过接入云API，把互动课堂管理、课件转码和录制等能力集成到客户自己的管理系统里(也可以根据需要使用控制台)。
 2. 客户在自己的客户端app里集成互动课堂组件。通过命令行调用组件，进入课堂，完成上课。
