--- a/Docs/SaaS/桌面端组件接入手册.md
+++ b/Docs/SaaS/桌面端组件接入手册.md
@@ -25,7 +25,7 @@ tc-videochat://tclass/[cid]/[class_id]?user_id=[user_id]&user_token=[user_token]
 
 参数名称|参数类型|参数描述
 :--:|:--:|:--
-cid|int|机构id
+cid|int|机构码
 class_id|int|课堂id
 user_id|string|用户帐号
 user_token|string|用户签名
