完善接入指引

--- a/Docs/SaaS/桌面端组件接入手册.md
+++ b/Docs/SaaS/桌面端组件接入手册.md
@@ -1,13 +1,29 @@
-# 桌面端组件接入手册
+# 组件接入指引手册
 
-客户将桌面端组件放入自己的app，从自己的app（或网页）把组件调起进行上课。
+# 接入流程图示例
 
-![接入交互图](https://main.qcloudimg.com/raw/0e1fa994c0cd247dd99584b80d88d89d.jpg)
+<!--![接入交互图](https://main.qcloudimg.com/raw/0e1fa994c0cd247dd99584b80d88d89d.jpg)-->
+<img src="https://main.qcloudimg.com/raw/46f2d975a00d080762705d163a39b1ee.jpg" width = "800" height = "1200" alt="接入流程图" align=center>
 
-## 1. 安装互动课堂组件
+# 调用组件参数解释及获取方式
+
+参数ID|参数类型|解释|获取方式
+:--:|:--:|:--:|:--
+cid|int|机构码：获取机构的信息(机构名称，应用icon等)的唯一标识|申请Saas服务邮件获取 具体见
+class_id|int|课堂id：获取课堂信息的唯一标识|通过云API 创建课堂获取
+user_id|string|用户帐号|通过云API 创建用户获取
+user_token|string|用户签名|通过云API 创建用户获取
+user_sig|string|腾讯云签名 登录必要的腾讯云模块用|1如果用户把私钥托管给我们，不用填 2如果没有托管，请拿IMSDK私钥自行计算
+
+
+## WIN/MAC组件接入
+### 1. 下载按照互动课堂组件
+    
+
+### 2. 安装互动课堂组件
 在用户机器上安装互动课堂组件。在Win10上必需使用管理员权限安装。
 
-## 2. 调起互动课堂组件
+### 3. 调起互动课堂组件
 
 - 命令行启动
 
