--- a/Docs/SaaS/组件接入指引手册.md
+++ b/Docs/SaaS/组件接入指引手册.md
@@ -1,11 +1,8 @@
-# 组件接入指引手册
+# 1.组件接入指引手册
 
-# 接入流程图示例
-
-<!--![接入交互图](https://main.qcloudimg.com/raw/0e1fa994c0cd247dd99584b80d88d89d.jpg)-->
 <img src="https://main.qcloudimg.com/raw/46f2d975a00d080762705d163a39b1ee.jpg" width = "800" height = "1200" alt="接入流程图" align=center>
 
-# 调用组件参数解释及获取方式
+# 2.调用组件参数解释及获取方式
 
 参数ID|参数类型|解释|获取方式
 :--:|:--:|:--:|:--
@@ -15,17 +12,29 @@ user_id|string|用户帐号|通过云API 创建用户获取
 user_token|string|用户签名|通过云API 创建用户获取
 user_sig|string|腾讯云签名 登录必要的腾讯云模块用|1如果用户把私钥托管给我们，不用填 2如果没有托管，请拿IMSDK私钥自行计算
 
+# 3.各个端接入流程
 
-## WIN/MAC组件接入
-### 1. 下载按照互动课堂组件
-mac: 	http://dldir1.qq.com/hudongzhibo/Saas/TClass_Saas.dmg
+[**桌面端接入流程跳转*](##WIN/MAC组件接入) 
+
+[**Android接入流程跳转*](##WIN/MAC组件接入)
+
+[**IOS接入流程跳转*](##WIN/MAC组件接入)
+
+[**WEB接入流程跳转*](##WIN/MAC组件接入)
+
+
+
+## 3.1 WIN/MAC组件接入
+
+### 3.1 下载按照互动课堂组件
+mac: http://dldir1.qq.com/hudongzhibo/Saas/TClass_Saas.dmg
 win: http://dldir1.qq.com/hudongzhibo/Saas/TClass_Setup_Saas.exe
     
 
-### 2. 安装互动课堂组件
+### 3.2  安装互动课堂组件
 在用户机器上安装互动课堂组件。在Win10上必需使用管理员权限安装。
 
-### 3. 调起互动课堂组件
+### 3.3 调起互动课堂组件
 
 - 命令行启动
 
