--- a/Docs/SaaS/组件接入指引手册.md
+++ b/Docs/SaaS/组件接入指引手册.md
@@ -6,7 +6,7 @@
 
 参数ID|参数类型|解释|获取方式
 :--:|:--:|:--:|:--
-cid|int|机构码：获取机构的信息(机构名称，应用icon等)的唯一标识|申请Saas服务邮件获取 具体见
+company_id|int|机构码：获取机构的信息(机构名称，应用icon等)的唯一标识|申请Saas服务邮件获取 具体见
 class_id|int|课堂id：获取课堂信息的唯一标识|通过云API 创建课堂获取
 user_id|string|用户帐号|通过云API 创建用户获取
 user_token|string|用户签名|通过云API 创建用户获取
@@ -39,13 +39,13 @@ win: http://dldir1.qq.com/hudongzhibo/Saas/TClass_Setup_Saas.exe
 - 命令行启动
 
 ```
-tclass cid class_id user_id user_token user_sig
+tclass company_id class_id user_id user_token user_sig
 ```
 
 - URL启动
 
 ```
-tc-videochat://tclass/[cid]/[class_id]?user_id=[user_id]&user_token=[user_token]&user_sig=[user_sig]
+tc-videochat://tclass/[company_id]/[class_id]?user_id=[user_id]&user_token=[user_token]&user_sig=[user_sig]
 ```
 
 
@@ -54,12 +54,12 @@ tc-videochat://tclass/[cid]/[class_id]?user_id=[user_id]&user_token=[user_token]
 ###  URL启动
 
 ```
-https://tedu.qcloudtrtc.com/#/class/enterprise_id/:class_id/:user_id?/:user_sig?/:user_token?
+https://tedu.qcloudtrtc.com/#/class/company_id/:class_id/:user_id?/:user_sig?/:user_token?
 ```
 
 ### example - 不带登录态
 ```
-enterprise_id(机构码) => 100001
+company_id(机构码) => 100001
 class_id（课堂id） => 1000713668
 ```
 
