更新控制台文档 还遗留一些TODO需要完成

--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -7,8 +7,6 @@
 > 如未完成，请根据指引提交申请。我们会尽快给您回复确认开通的邮件，相关账号也会在邮件中说明。
 
 
-
-
 ## 二. 控制台入口
 - 控制台地址：[https://tedu.console.qcloudtrtc.com](https://tedu.console.qcloudtrtc.com/)
 
@@ -19,9 +17,13 @@
 
 - 登录
 - 机构设置
+  修改机构和全局配置信息。
 - 用户管理
+  在这里(或通过云API)增加使用互动课堂的学生和老师的账号。
 - 课堂管理
+  在这里(或通过云API)进行约课后，互动课堂客户端才能进入课堂。
 - 课件管理
+  在这里(或通过云API)把课堂中需要用到的课件提前上传。
 
 ### 1. 登录
 
@@ -31,18 +33,12 @@
 
 ### 2. 机构设置
 
-#### 2.1 设置私钥
-
-> 如果使用控制台进行约课等行为，管理员必须先获取填写私钥。
-
-管理员登录成功后，点击【机构设置】>【基本信息】页面，按照指引获取私钥进行填写，并点击保存。
-
-![](https://main.qcloudimg.com/raw/9df672e4acd6067f5fa79c9f751ccd21.png)
-
-#### 2.2 修改机构基本信息
-
-在【机构设置】>【基本信息】页面，管理员可自行修改机构logo的图片地址，联系人，联系电话，邮箱和回调url；机构码，机构名称，sdkappid和账号周期由控制台后台填充，不可修改。
-> 控制台配置回调url，回调的信息会通过这个地址请求反馈给用户。这个回调地址可以根据用户的业务场景填写 ，如果不需要接收回调信息可以不填。
+在【机构设置】>【基本信息】页面，管理员可自行设置以下信息：
+1. 机构的联系人，联系电话，邮箱。
+2. logo图片的URL地址。//TODO 补上要求和用途。
+3. 私钥。
+   如果使用控制台进行约课等行为，管理员必须先填写私钥。详细情况请参考配置页面中的文档链接。
+4. 回调url。当发生老师上下课、实时录制开始结束等事件后，互动课堂server会将此信息回调给客户。客户如需要可以进行配置。详细情况请参考配置页面中的文档链接。
 
 ### 3. 用户管理
 
@@ -51,8 +47,6 @@
 (1)  在【用户管理】页面，点击上方【添加用户】按钮，进入【添加用户】页面。
 
 ![](https://main.qcloudimg.com/raw/a59e3a560a575f48e0c279aeeef60f46.png)
-
-
 
 (2) 在【角色类型】下拉列表中选择用户身份，完善用户信息，包括:用户id,用户昵称,用户密码等。点击【保存】后添加用户。添加成功将弹出”保存成功“提示，并自动跳转至【用户管理】页面，管理员可查看用户信息。
 
@@ -69,6 +63,7 @@
 #### 3.3 编辑用户信息
 管理员管理员在【用户管理】页面，可以重新编辑单个用户的信息，操作与添加用户相同。用户id不可被修改。
 ![](https://main.qcloudimg.com/raw/93a5fd74913a73e03879573fb0db60b3.png)
+
 ### 4. 课堂管理
 
 #### 4.1 创建课堂
@@ -107,7 +102,6 @@
 
 管理员在【教学管理】>【课堂管理】页面，可查看目前所有课堂信息，包括课程ID，课程名称，课程状态（未开课/上课中/已结束），以及预约的开始结束时间等；通过右上方搜索栏，搜索课堂id可查看对应课堂信息。
 
-
 ![](https://main.qcloudimg.com/raw/32d0930db909339510127c963421b92a.png)
 
 #### 4.3 课堂管理操作
@@ -126,7 +120,7 @@
 
 - **查看详情**：点击该节课堂信息中的【查看详情】，即可获取课堂链接，课堂链接主要包含机构码和该课程id。
 
-  > 管理员可以将链接分享给老师或学生，老师或学生在互动课堂客户端/移动端/web端输入链接，可直接进入链接所属课堂。
+  > 管理员可以将链接分享给老师或学生，老师或学生在互动课堂客户端/移动端/web端输入链接，可直接进入链接所属课堂。 //TODO 约课开始时间 结束时间的含义是什么 和客户端的上下课按钮关系 提前多久可以进入
   >
   > 已结束的课堂不可点击【查看详情】。
 
@@ -148,9 +142,9 @@
 
 - 若选择文档权限为【私有】，则该课件只有课件归属人和管理员可以查看；【公开】则所有人都可查看；
 
-- 若选择【转码】，则将PPT转成H5动画；
+- 若选择【转码】，并且文档是ppt的话，则将PPT转成H5动画；
 
-(3）点击【立即创建】后创建课件，创建成功将弹出”添加成功“提示，并自动跳转至【课件管理】页面，可查看课件信息。
+(3）点击【立即创建】后创建课件，创建成功将弹出”添加成功“提示，并自动跳转至【课件管理】页面，可查看课件信息。 //TODO 哪里查看是否转码成功
 
 ![](https://main.qcloudimg.com/raw/d56a1abdcdb50cca996c21c5b2ceba41.png)
 
@@ -165,4 +159,3 @@
 管理员在【教学管理】>【课件管理】页面，可以自行**下载**或**删除**课件。
 
 ![](https://main.qcloudimg.com/raw/05b7edb9e6880ed8a77f28a7fd89069d.png)
-
