--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -38,6 +38,7 @@
 2. logo图片的URL地址。//TODO 补上要求和用途。
 3. 私钥。
    如果使用控制台进行约课等行为，管理员必须先填写私钥。详细情况请参考配置页面中的文档链接。
+   //TOOD 确认新的sig算法如何兼容
 4. 回调url。当发生老师上下课、实时录制开始结束等事件后，互动课堂server会将此信息回调给客户。客户如需要可以进行配置。详细情况请参考配置页面中的文档链接。
 
 ### 3. 用户管理
@@ -85,6 +86,9 @@
 | 学生     | 允许进入该节课的学生列表，若不填写则登录课堂的用户都可进入   |
 | 录制类型 | 云端录制：老师加入房间时，自动开启在线录制；本地录制暂未支持 |
 
+//TODO 云端录制支持吗？ 本地录制？
+//TODO 约课开始时间 结束时间的含义是什么 和客户端的上下课按钮关系 提前多久可以进入
+
 ![](https://main.qcloudimg.com/raw/c4fe3179764468a3a280b5c39a04c267.png)
 
 （3）点击【教师】，在弹框列表中搜索或点击选择本节课程教师，教师id将自动填写在课堂表单中。只能选择一个教师。
@@ -120,7 +124,7 @@
 
 - **查看详情**：点击该节课堂信息中的【查看详情】，即可获取课堂链接，课堂链接主要包含机构码和该课程id。
 
-  > 管理员可以将链接分享给老师或学生，老师或学生在互动课堂客户端/移动端/web端输入链接，可直接进入链接所属课堂。 //TODO 约课开始时间 结束时间的含义是什么 和客户端的上下课按钮关系 提前多久可以进入
+  > 管理员可以将链接分享给老师或学生，老师或学生在互动课堂客户端/移动端/web端输入链接，可直接进入链接所属课堂。 
   >
   > 已结束的课堂不可点击【查看详情】。
 
@@ -142,7 +146,7 @@
 
 - 若选择文档权限为【私有】，则该课件只有课件归属人和管理员可以查看；【公开】则所有人都可查看；
 
-- 若选择【转码】，并且文档是ppt的话，则将PPT转成H5动画；
+- 若选择【转码】，并且文档是ppt的话，则将PPT转成H5动画；//TODO 如果不是ppt
 
 (3）点击【立即创建】后创建课件，创建成功将弹出”添加成功“提示，并自动跳转至【课件管理】页面，可查看课件信息。 //TODO 哪里查看是否转码成功
 
