--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -35,7 +35,7 @@
 
 在【机构设置】>【基本信息】页面，管理员可自行设置以下信息：
 1. 机构的联系人，联系电话，邮箱。
-2. logo图片的URL地址。//TODO 补上要求和用途。
+2. logo图片的URL地址。URL地址更换后，客户端/移动端/web端的logo图标一致更换。
 3. 私钥。
    如果使用控制台进行约课等行为，管理员必须先填写私钥。详细情况请参考配置页面中的文档链接。
    //TOOD 确认新的sig算法如何兼容
@@ -53,7 +53,7 @@
 
 >被添加的用户可通过添加时填写的用户id和密码登录课堂。
 
-![](https://main.qcloudimg.com/raw/cb193c861840b18462a56b3173dce35f.png)
+![](https://main.qcloudimg.com/raw/7ed2ef84768cc4e84d93b9ec44b0e4e2.png)
 
 #### 3.2 查看用户信息
 
@@ -77,19 +77,27 @@
 
 （2）管理员在创建课堂时可设置以下信息：
 
-| 名称     | 说明                                                         |
-| -------- | ------------------------------------------------------------ |
-| 课堂主题 | 课堂名称                                                     |
-| 开始时间 | 预约课堂的开始时间                                           |
-| 结束时间 | 预约课堂的结束时间                                           |
-| 教师     | 该节课的教师                                                 |
-| 学生     | 允许进入该节课的学生列表，若不填写则登录课堂的用户都可进入   |
-| 录制类型 | 云端录制：老师加入房间时，自动开启在线录制；本地录制暂未支持 |
+- 课堂主题：课堂名称
 
-//TODO 云端录制支持吗？ 本地录制？
-//TODO 约课开始时间 结束时间的含义是什么 和客户端的上下课按钮关系 提前多久可以进入
+- 课堂类型：目前只支持【小班课】；选择【大班课】和【1v1】，表现形式与【小班课】相同；
 
-![](https://main.qcloudimg.com/raw/c4fe3179764468a3a280b5c39a04c267.png)
+- 开始时间：预定的上课时间
+
+  > 预定上课时间的前一个小时可以进入课堂，并且开课前一小时不允许修改该节课教师。预定上课时间不影响客户端上课按钮的点击 ，用户可自行决定上课时间。                                        
+
+- 结束时间：预定的下课时间
+
+  > 预定下课时间不影响客户端下课按钮的点击 ，用户可自行决定下课时间。                                      
+
+- 教师：该节课的教师；                                                 
+
+- 学生：允许进入该节课的学生列表，若不填写则登录课堂的用户都可进入；   
+
+- 录制类型 :【本地录制】目前只有mac和windows端支持，录制方式为截屏录制，录制结果将以flv格式保存在本地；【云端录制】暂不支持；
+
+- 音视频：选择【小班课】和【1v1】，默认学生自动开启摄像头和麦克风；选择【大班课】，默认学生不开启摄像头和麦克风；用户也可自行设置。
+
+![](https://main.qcloudimg.com/raw/eb4c23150aaa61ee2f1cd6b67a5c18f4.png)
 
 （3）点击【教师】，在弹框列表中搜索或点击选择本节课程教师，教师id将自动填写在课堂表单中。只能选择一个教师。
 
@@ -146,11 +154,10 @@
 
 - 若选择文档权限为【私有】，则该课件只有课件归属人和管理员可以查看；【公开】则所有人都可查看；
 
-- 若选择【转码】，并且文档是ppt的话，则将PPT转成H5动画；//TODO 如果不是ppt
 
-(3）点击【立即创建】后创建课件，创建成功将弹出”添加成功“提示，并自动跳转至【课件管理】页面，可查看课件信息。 //TODO 哪里查看是否转码成功
+(3）点击【立即创建】后创建课件，创建成功将弹出”添加成功“提示，并自动跳转至【课件管理】页面，可查看课件信息。 
 
-![](https://main.qcloudimg.com/raw/d56a1abdcdb50cca996c21c5b2ceba41.png)
+![](https://main.qcloudimg.com/raw/3d58e531d497c82084144504a28ccd10.png)
 
 #### 5.2 查看课件信息
 
