--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -83,7 +83,8 @@
 
 - 开始时间：预定的上课时间
 
-  > 预定上课时间的前一个小时可以进入课堂，并且开课前一小时不允许修改该节课教师。预定上课时间不影响客户端上课按钮的点击 ，用户可自行决定上课时间。                                        
+  > 预定上课时间的前一个小时可以进入课堂，并且开课前一小时不允许修改该节课教师。
+  >预定上课时间不影响客户端上课按钮的点击 ，用户可自行决定上课时间。                                        
 
 - 结束时间：预定的下课时间
 
