--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -35,7 +35,7 @@
 
 在【机构设置】>【基本信息】页面，管理员可自行设置以下信息：
 1. 机构的联系人，联系电话，邮箱。
-2. logo图片的URL地址。URL地址更换后，客户端/移动端/web端的logo图标一致更换。
+2. logo图片的URL地址。logo图片大小要求为100px*100px，类型为png/jpg。URL地址更换后，客户端/移动端/web端的logo图标一致更换。
 3. 私钥。
    如果使用控制台进行约课等行为，管理员必须先填写私钥。详细情况请参考配置页面中的文档链接。
    //TOOD 确认新的sig算法如何兼容
