--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -35,7 +35,7 @@
 
 在【机构设置】>【基本信息】页面，管理员可自行设置以下信息：
 1. 机构的联系人，联系电话，邮箱。
-2. logo图片的URL地址。logo图片大小要求为100px*100px，类型为png/jpg。URL地址更换后，客户端logo图标更换。
+2. logo图片的URL地址。logo图片大小要求为100px*100px，类型为png/jpg。URL地址更换后，桌面端上课页面左上角logo更换。
 3. 私钥。
    如果使用控制台进行约课等行为，管理员必须先填写私钥。详细情况请参考配置页面中的文档链接。
 4. 回调url。当发生老师上下课、实时录制开始结束等事件后，互动课堂server会将此信息回调给客户。客户如需要可以进行配置。详细情况请参考配置页面中的文档链接。
@@ -83,11 +83,13 @@
 - 开始时间：预定的上课时间
 
   > 预定上课时间的前一个小时可以进入课堂，并且开课前一小时不允许修改该节课教师。
-  >预定上课时间不影响客户端上课按钮的点击 ，用户可自行决定上课时间。                                        
+  >预定上课时间不影响上课按钮的点击 ，教师可自行决定上课时间。
+  >教师点击上课按钮后，教师和学生同步开始课堂计时，教师端展现涂鸦工具栏，可开始上课。
 
 - 结束时间：预定的下课时间
 
-  > 预定下课时间不影响客户端下课按钮的点击 ，用户可自行决定下课时间。                                      
+  > 预定下课时间不影响下课按钮的点击 ，教师可自行决定下课时间。  
+  > 教师点击下课按钮并确认后，计时停止，课堂结束，所有课堂内的学生都会收到课堂结束的提示，退出房间。
 
 - 教师：该节课的教师；                                                 
 
@@ -132,7 +134,7 @@
 
 - **查看详情**：点击该节课堂信息中的【查看详情】，即可获取课堂链接，课堂链接主要包含机构码和该课程id。
 
-  > 管理员可以将链接分享给老师或学生，老师或学生在互动课堂客户端/移动端/web端输入链接，可直接进入链接所属课堂。 
+  > 管理员可以将链接分享给老师或学生，老师或学生在互动课堂桌面端/移动端/web端输入链接，可直接进入链接所属课堂。 
   >
   > 已结束的课堂不可点击【查看详情】。
 
