--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -95,7 +95,7 @@
 
 - 学生：允许进入该节课的学生列表，若不填写则登录课堂的用户都可进入；   
 
-- 录制类型 :【本地录制】目前只有mac和windows端支持，录制方式为截屏录制，录制结果将以flv格式保存在本地；【云端录制】暂不支持；
+- 录制类型 :【本地录制】目前只有mac和windows端支持，录制方式为截屏录制，录制结果将以flv格式保存在本地；【云端录制】正在开发，待发布；
 
 - 音视频：选择【小班课】和【1v1】，默认学生自动开启摄像头和麦克风；选择【大班课】，默认学生不开启摄像头和麦克风；用户也可自行设置。
 
