--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -90,6 +90,7 @@
 
   > 预定下课时间不影响下课按钮的点击 ，教师可自行决定下课时间。  
   > 教师点击下课按钮并确认后，计时停止，课堂结束，所有课堂内的学生都会收到课堂结束的提示，退出房间。
+  >预定下课时间到达，且课堂内没有任务成员时，将自动结束课堂
 
 - 教师：该节课的教师；                                                 
 
