更新文档索引页

--- a/Docs/接入指引2.md
+++ b/Docs/接入指引2.md
@@ -2,17 +2,15 @@
 
 腾讯云在线教育互动课堂（Tencent Interact Class，TIC）是集实时音视频、交互式白板涂鸦、IM 聊天室、PPT 课件共享、屏幕分享和录制回放等功能于一体的一站式在线教育解决方案。
 
-为了适应不同客户的需求，我们把互动课堂的接入方案分成了SAAS、半SAAS和PAAS三种。下面的表中列举了这三种方案的主要区别，客户可以根据自身情况灵活选择。我们也支持这三种方案的无缝切换。
+为了适应不同客户的需求，我们把互动课堂的接入方案分成了SAAS和PAAS两种。下面的表中列举了这两种方案的主要区别。
+客户可以根据自身情况灵活选择。我们也支持这两种方案的无缝切换。
 
-|  | SAAS | 课堂组件 | PAAS |
-| :-- | :-- | :-- | :-- |
-| 上线速度 | 最快(1天) | 适中(约1周) | 最长 |
-| 课程管理 | 控制台 | 控制台/云API | 不支持 |
-| 客户端开发 | 不需要 | 需要集成组件 | 需集成SDK |
-| 自定义上课UI | 选择模板 | 选择模板 | 需客户自己开发 |
-| 自定义机构名 | 支持 | 支持 | 支持 |
-| 视频和白板录制 | 本地/云端 | 本地/云端 | 云端 |
-| 数据统计和回调 | 支持 | 支持 | 不支持 |
+|SAAS |  PAAS |
+| :-- | :-- |  :-- |
+| 课程管理 | 控制台/云API | 不支持 |
+| 客户端 | 互动课堂app/集成课堂UI组件 | 集成SDK |
+| 视频和白板录制 | 本地/云端 | 云端 |
+| 数据统计和回调 | 支持 | 不支持 |
 
 功能模块列表：
 
@@ -29,30 +27,35 @@
 | IM聊天 | 支持 | 支持 | 支持 | 支持 |
 
 
-### SAAS方案文档
+### 快速体验Demo
 
-管理员可以直接通过控制台进行课堂管理和老师/学生管理等。
-老师和学生可以直接安装使用互动课堂SaaS客户端。
-不需要任何开发即可接入互动课堂服务。
-具体使用方式可以参阅：
+//TODO 上课界面图片
 
-- [控制台使用手册](./SaaS/%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C.md)
-- [桌面端使用手册]
-- [web端使用手册]
-- [移动端使用手册]
+下载Demo，直接进入课堂体验吧。
+
+| PC | MAC | Android | ios | web |
+| --- | --- | --- | --- | --- |
+|  |  |  |  |  |
 
 
-### 课堂组件方案文档 
+demo功能可参考下面的桌面端/移动端使用手册。
 
-1. 客户通过接入云API，把互动课堂管理、课件转码和录制等能力集成到客户自己的管理系统里(也可以根据需要使用控制台)。
-2. 客户在自己的客户端app里集成互动课堂组件。通过命令行调用组件，进入课堂，完成上课。
+### SAAS方案接入
 
-- [互动课堂业务云API](./SaaS/%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/%E4%BA%91API.md)
-- [桌面端组件接入手册]
-- [web端组件接入手册]
-- [移动端组件接入手册]
+1. 在控制台进行课堂管理和老师/学生管理。[控制台使用手册]
+2. 下载桌面端app，体验完整功能。[桌面端使用手册]
+3. 下载移动端app，体验完整功能。[移动端使用手册]
+4. 直接使用腾讯云互动课堂app的客户，请参考[客户端app方式接入指南]。
+5. 需要自行开发app的客户，请参考[客户端组件方式接入指南]。
+6. 可以使用云API完成控制台所有功能，请参考[云API接入指南]。
 
 ### PAAS方案文档
+
+//TODO PAAS Demo图片
+
+| PC | MAC | Android | ios | web | 小程序 |
+| --- | --- | --- | --- | --- | --- |
+|  |  |  |  |  |  |
 
 1. 通过集成云端API，实现课件转码和录制等功能。
 2. 客户按自身的业务逻辑，集成互动白板、音视频和IM SDK，完成上课流程的闭环。
