--- a/Docs/接入指引2.md
+++ b/Docs/接入指引2.md
@@ -5,8 +5,8 @@
 为了适应不同客户的需求，我们把互动课堂的接入方案分成了SAAS和PAAS两种。下面的表中列举了这两种方案的主要区别。
 客户可以根据自身情况灵活选择。我们也支持这两种方案的无缝切换。
 
-|SAAS |  PAAS |
-| :-- |  :-- |
+|SAAS |  PAAS |能力
+| :-- | :-- |  :-- |
 | 课程管理 | 控制台/云API | 不支持 |
 | 客户端 | 互动课堂app/集成课堂UI组件 | 集成SDK |
 | 视频和白板录制 | 本地/云端 | 云端 |
@@ -29,7 +29,7 @@
 
 ### 快速体验Demo
 
-//TODO 上课界面图片
+![](https://main.qcloudimg.com/raw/ea3692fd322dbcc7d86c3fc3cc6d3c59.jpg)
 
 下载Demo，直接进入课堂体验吧。
 
