修改表格格式

--- a/Docs/接入指引2.md
+++ b/Docs/接入指引2.md
@@ -5,12 +5,13 @@
 为了适应不同客户的需求，我们把互动课堂的接入方案分成了SAAS和PAAS两种。下面的表中列举了这两种方案的主要区别。
 客户可以根据自身情况灵活选择。我们也支持这两种方案的无缝切换。
 
-|SAAS |  PAAS |能力
-| :-- | :-- |  :-- |
+|能力 |PAAS |SAAS|
+| --- | --- | --- |
 | 课程管理 | 控制台/云API | 不支持 |
 | 客户端 | 互动课堂app/集成课堂UI组件 | 集成SDK |
 | 视频和白板录制 | 本地/云端 | 云端 |
 | 数据统计和回调 | 支持 | 不支持 |
+
 
 功能模块列表：
 
