--- a/Docs/接入指引2.md
+++ b/Docs/接入指引2.md
@@ -59,9 +59,9 @@ demo功能可参考下面的桌面端/移动端使用手册。
 
 1. 在控制台进行课堂管理和老师/学生管理。[控制台使用手册](./SaaS/%e6%8e%a7%e5%88%b6%e5%8f%b0%e4%bd%bf%e7%94%a8%e6%89%8b%e5%86%8c.md)
 2. 下载桌面端app，体验完整功能。[桌面端使用手册](./SaaS/%e4%ba%92%e5%8a%a8%e8%af%be%e5%a0%82SaaS%e6%a1%8c%e9%9d%a2%e7%ab%af%e4%bd%bf%e7%94%a8%e6%89%8b%e5%86%8c.md)
-3. 下载移动端app，体验完整功能。[移动端使用手册](./Saas/%e4%ba%92%e5%8a%a8%e8%af%be%e5%a0%82SaaS%e7%a7%bb%e5%8a%a8%e7%ab%afApp%e4%bd%bf%e7%94%a8%e6%89%8b%e5%86%8c.md)
-4. 直接使用腾讯云互动课堂app的客户，请参考[客户端app方式接入指南](./Saas/SaaS%e5%ae%a2%e6%88%b7%e7%ab%af%e6%8e%a5%e5%85%a5%e6%8c%87%e5%bc%95%e6%89%8b%e5%86%8c.md)
-5. 需要自行开发app的客户，请参考[客户端组件方式接入指南](./Saas/%e4%ba%92%e5%8a%a8%e8%af%be%e5%a0%82%e7%bb%84%e4%bb%b6%e6%8e%a5%e5%85%a5%e6%8c%87%e5%bc%95%e6%89%8b%e5%86%8c.md)
+3. 下载移动端app，体验完整功能。[移动端使用手册](./SaaS/%e4%ba%92%e5%8a%a8%e8%af%be%e5%a0%82SaaS%e7%a7%bb%e5%8a%a8%e7%ab%afApp%e4%bd%bf%e7%94%a8%e6%89%8b%e5%86%8c.md)
+4. 直接使用腾讯云互动课堂app的客户，请参考[客户端app方式接入指南](./SaaS/SaaS%e5%ae%a2%e6%88%b7%e7%ab%af%e6%8e%a5%e5%85%a5%e6%8c%87%e5%bc%95%e6%89%8b%e5%86%8c.md)
+5. 需要自行开发app的客户，请参考[客户端组件方式接入指南](./SaaS/%e4%ba%92%e5%8a%a8%e8%af%be%e5%a0%82%e7%bb%84%e4%bb%b6%e6%8e%a5%e5%85%a5%e6%8c%87%e5%bc%95%e6%89%8b%e5%86%8c.md)
 6. 可以使用云API完成控制台所有功能，请参考[云API接入指南](./Saas/)
 
 ### PAAS方案文档
