--- a/Docs/SaaS/快速体验.md
+++ b/Docs/SaaS/快速体验.md
@@ -40,7 +40,7 @@
  ![](http://dldir1.qq.com/hudongzhibo/saas/视频.gif)
  
 - 课堂学生管理
-老师可以对课堂中的学生权限进行控制，比如打开关闭麦克风和摄像头，将某个学生禁言（禁止发送 IM 消息）或强制退出课堂。
+老师可以对课堂中的学生权限进行控制，例如打开关闭麦克风和摄像头，将某个学生禁言（禁止发送 IM 消息）或强制退出课堂。
 本区域内容可以根据具体需求扩展。
 
 ![](https://main.qcloudimg.com/raw/7a198380117363ac913ce8a76e96257b.png)
