--- a/Docs/SaaS/控制台使用手册.md
+++ b/Docs/SaaS/控制台使用手册.md
@@ -80,6 +80,11 @@
 
 - 课堂类型：目前只支持【小班课】；选择【大班课】和【1v1】，表现形式与【小班课】相同；
 
+- 课堂时间：
+
+
+![](https://main.qcloudimg.com/raw/963c7f92f90ce615c9e5b9740f5dd098.png)
+
 - 开始时间：预定的上课时间
 
   > 预定上课时间的前一个小时可以进入课堂，并且开课前一小时不允许修改该节课教师。
