补充参数获取

--- a/Docs/SaaS/互动课堂组件接入指引手册.md
+++ b/Docs/SaaS/互动课堂组件接入指引手册.md
@@ -6,11 +6,11 @@
 
 参数ID|参数类型|解释|获取方式
 :--:|:--:|:--:|:--
-company_id|int|机构码：获取机构的信息(机构名称，应用icon等)的唯一标识|申请Saas服务邮件获取 具体见
-class_id|int|课堂id：获取课堂信息的唯一标识|通过云API 创建课堂获取
-user_id|string|用户帐号|通过云API 创建用户获取
-user_token|string|用户签名|通过云API 创建用户获取
-user_sig|string|腾讯云签名 登录必要的腾讯云模块用|1如果用户把私钥托管给我们，不用填 2如果没有托管，请拿IMSDK私钥自行计算
+company_id|int|机构码：获取机构的信息(机构名称，应用icon等)的唯一标识|申请Saas服务邮件获取。[参考邮件获取方式]()
+class_id|int|课堂id：获取课堂信息的唯一标识|通过云API创建课堂获取。[参考云API]()
+user_id|string|用户帐号|通过云API创建用户获取[参考云API]()
+user_token|string|用户签名|通过云API创建用户获取[参考云API]()
+user_sig|string|腾讯云签名 登录必要的腾讯云模块用|1如果用户把私钥托管给我们控制台，则不用填。 2如果没有托管，请拿IMSDK私钥自行计算[具体见IM获取sig]()
 
 # 3.各个端接入流程
 
